--- a/plotRisco.tex
+++ b/plotRisco.tex
@@ -1,6 +1,6 @@
 \begin{figure}
 \begin{center}
-\caption{Instabilidade das estratégias.
+\caption{Variabilidade das estratégias.
 \textit{Detalhes na Figura \ref{curvas}.}}
 \label{curvasdesvio}
 \begin{tikzpicture}[scale=1]
