--- a/rankplotRisco.tex
+++ b/rankplotRisco.tex
@@ -1,5 +1,5 @@
 \begin{figure}
-\caption{Instabilidade ranqueada das estratégias.
+\caption{Variabilidade ranqueada das estratégias.
  \textit{Detalhes na Figura \ref{curvas}.}}
 \label{curvasrankdesvio}
 \begin{center}
