antes do overleaf

--- a/apendice2.tex
+++ b/apendice2.tex
@@ -16,30 +16,30 @@ exposta na Seção \ref{algs} são apresentados nas tabelas \ref{tab:balaccClassif0
 
 \subsection{5NN}
 \afterpage{\clearpage\begin{landscape}
-\input stratstab5NN
+\input stratstabALCKappa5NN
 \end{landscape}\clearpage}
 
 \subsection{C4.5}
 \afterpage{\clearpage\begin{landscape}
-\input stratstabC4.5w
+\input stratstabALCKappaC4.5w
 \end{landscape}\clearpage}
 
 \subsection{CIELM}
 \afterpage{\clearpage\begin{landscape}
-\input stratstabCIELM
+\input stratstabALCKappaCIELM
 \end{landscape}\clearpage}
 
 \subsection{NB}
 \afterpage{\clearpage\begin{landscape}
-\input stratstabNB
+\input stratstabALCKappaNB
 \end{landscape}\clearpage}
 
 \subsection{RF}
 \afterpage{\clearpage\begin{landscape}
-\input stratstabRFw
+\input stratstabALCKappaRFw
 \end{landscape}\clearpage}
 
 \subsection{SVM}
 \afterpage{\clearpage\begin{landscape}
-\input stratstabSVM
+\input stratstabALCKappaSVM
 \end{landscape}\clearpage}
