--- a/exp-analise.tex
+++ b/exp-analise.tex
@@ -248,33 +248,33 @@ level 5/.style={text width=2cm, font=\footnotesize, level distance=3.2cm,sibling
 % \end{landscape}\clearpage}
 
 % % \afterpage{\clearpage\begin{landscape}
-% \begin{figure}
-% \tikzset{
-% every node/.style={font=\scriptsize,black, thin},
-% decision/.style={shape=rectangle, minimum height=1cm, text width=1.7cm,
-% text centered, rounded corners=1ex, draw},
-% outcome/.style={ shape=rectangle, fill=red!15, draw, text width=2cm, text justified},
-% decision tree/.style={sibling distance=3cm, level distance=2cm},
-% cond/.style={blue, yshift=-2mm, shape=rectangle, text centered},
-% }
-% \begin{center}
-% \caption{Possíveis nichos de inadequação base-estratégia-algoritmo.
-% \textit{Mínimo de dez exemplos por folha.}}
-% \begin{tikzpicture} [edge from parent/.style={->,above,draw,sloped,midway,gray!30,ultra thick},
-% text width=2.7cm, align=flush center, grow cyclic,
-% level 1/.style={level distance=3.2cm,sibling angle=180},
-% level 2/.style={text width=2cm, font=\footnotesize, level distance=3.2cm,sibling angle=60},
-% level 3/.style={text width=2cm, font=\footnotesize, level distance=3.2cm,sibling angle=60},
-% level 4/.style={text width=2cm, font=\footnotesize, level distance=3.2cm,sibling angle=60},
-% level 5/.style={text width=2cm, font=\footnotesize, level distance=3.2cm,sibling angle=60},
-% ]
-% \input{treeALCKappaperd}
-% \label{treegoodleas}
-% \end{tikzpicture}
-% \end{center}
-% \end{figure}
+\begin{figure}
+\tikzset{
+every node/.style={font=\scriptsize,black, thin},
+decision/.style={shape=rectangle, minimum height=1cm, text width=1.7cm,
+text centered, rounded corners=1ex, draw},
+outcome/.style={ shape=rectangle, fill=red!15, draw, text width=2cm, text justified},
+decision tree/.style={sibling distance=3cm, level distance=2cm},
+cond/.style={blue, yshift=-2mm, shape=rectangle, text centered},
+}
+\begin{center}
+\caption{Possíveis nichos de inadequação base-estratégia-algoritmo.
+\textit{Mínimo de dez exemplos por folha.}}
+\begin{tikzpicture} [edge from parent/.style={->,above,draw,sloped,midway,gray!30,ultra thick},
+text width=2.7cm, align=flush center, grow cyclic,
+level 1/.style={level distance=3.2cm,sibling angle=180},
+level 2/.style={text width=2cm, font=\footnotesize, level distance=3.2cm,sibling angle=60},
+level 3/.style={text width=2cm, font=\footnotesize, level distance=3.2cm,sibling angle=60},
+level 4/.style={text width=2cm, font=\footnotesize, level distance=3.2cm,sibling angle=60},
+level 5/.style={text width=2cm, font=\footnotesize, level distance=3.2cm,sibling angle=60},
+]
+\input{treeALCKappaperd}
+\label{treegoodleas}
+\end{tikzpicture}
+\end{center}
+\end{figure}
 % % \end{landscape}\clearpage}
-
+essa arvore acima justifica o cenario abaixo 
 \subsection{Cenário com definição de algoritmo após rotulação}\label{crf}
 A estratégia específica QBC perdeu de todas, exceto GATUman e Rnd,
 conforme Tabela \ref{stratsALCKappaFriedRFwRedux}.
@@ -317,6 +317,8 @@ Clu        & \ruim{1} & 25 & \bomd{1} \\
 \label{stratsALCKappaFriedRFwRedux}
 \end{center}
 \end{table}
+
+\input{stratsfriedKappa}
 
 
 \subsection{Comparação SVM}\label{csvm}
