--- a/stratstab5NN.tex
+++ b/stratstab5NN.tex
@@ -2,7 +2,9 @@
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador 5NN. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 1-abalone 3class &   0.52/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} &   0.52/\textcolor{black}{\textbf{  0.02}} &   0.50/  0.04 &   0.53/  0.03 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\
+ \hline 
+1-abalone 3class &   0.52/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} &   0.52/\textcolor{black}{\textbf{  0.02}} &   0.50/  0.04 &   0.53/  0.03 \\
 2-arcene &   0.79/\textcolor{black}{\textbf{  0.04}} &   0.78/  0.05 &   0.80/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.81}}/  0.05 &   0.79/\textcolor{black}{\textbf{  0.04}} &   0.80/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.81}}/  0.05 &   0.77/  0.05 &   0.79/\textcolor{black}{\textbf{  0.04}} &   0.79/\textcolor{black}{\textbf{  0.04}} &   0.76/  0.05 \\
 3-artificial charact... &   0.37/  0.02 &   0.37/  0.02 & \textcolor{blue}{\textbf{  0.41}}/\textcolor{black}{\textbf{  0.01}} &   0.40/  0.02 & \textcolor{blue}{\textbf{  0.41}}/\textcolor{black}{\textbf{  0.01}} &   0.40/  0.02 &   0.40/  0.02 & \textcolor{blue}{\textbf{  0.41}}/\textcolor{black}{\textbf{  0.01}} &   0.37/  0.02 &   0.38/  0.02 &   0.38/  0.02 \\
 4-autoUniv au1 1000 &   0.54/  0.03 & \textcolor{red}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.55}}/  0.03 &   0.54/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.55}}/  0.03 &   0.54/  0.03 &   0.54/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.02}} \\
@@ -33,13 +35,17 @@
 29-ionosphere &   0.77/  0.05 &   0.77/  0.05 & \textcolor{black}{\textbf{  0.79}}/  0.04 &   0.78/  0.05 & \textcolor{black}{\textbf{  0.79}}/  0.04 &   0.76/\textcolor{black}{\textbf{  0.03}} &   0.78/  0.04 &   0.78/  0.04 &   0.77/  0.05 &   0.77/\textcolor{black}{\textbf{  0.03}} &   0.77/  0.04 \\
 30-iris &   0.94/  0.03 &   0.94/\textcolor{black}{\textbf{  0.02}} &   0.94/  0.03 &   0.94/  0.03 &   0.94/  0.03 &   0.94/  0.03 &   0.94/  0.03 &   0.94/  0.03 &   0.94/  0.03 &   0.94/  0.03 &   0.94/  0.03 \\
 31-kr vs kp &   0.74/  0.02 &   0.74/  0.02 &   0.76/\textcolor{black}{\textbf{  0.01}} &   0.76/\textcolor{black}{\textbf{  0.01}} &   0.75/\textcolor{black}{\textbf{  0.01}} &   0.76/\textcolor{black}{\textbf{  0.01}} &   0.76/\textcolor{black}{\textbf{  0.01}} &   0.76/\textcolor{black}{\textbf{  0.01}} &   0.74/  0.02 &   0.74/  0.02 &   0.76/  0.02 \\
-32-leaf &   0.49/  0.04 &   0.50/  0.04 &   0.52/  0.04 &   0.51/\textcolor{black}{\textbf{  0.03}} &   0.53/  0.04 &   0.52/  0.04 &   0.51/\textcolor{black}{\textbf{  0.03}} &   0.53/  0.04 &   0.49/  0.04 &   0.50/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.54}}/  0.04 \\\end{tabular}}\label{strats0a5NN}
+32-leaf &   0.49/  0.04 &   0.50/  0.04 &   0.52/  0.04 &   0.51/\textcolor{black}{\textbf{  0.03}} &   0.53/  0.04 &   0.52/  0.04 &   0.51/\textcolor{black}{\textbf{  0.03}} &   0.53/  0.04 &   0.49/  0.04 &   0.50/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.54}}/  0.04 \\\end{tabular}
+}\label{strats0a5NN}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador 5NN. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\ \hline 1-abalone 3class &   0.53/  0.03 &   0.52/  0.04 & \textcolor{red}{\textbf{  0.49}}/  0.06 & \textcolor{red}{\textbf{  0.49}}/  0.03 & \textcolor{blue}{\textbf{  0.54}}/  0.03 & \textcolor{blue}{\textbf{  0.54}}/  0.03 & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} &   0.52/  0.03 &   0.53/  0.03 & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} &   0.52/  0.05 \\
+ & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\
+ \hline 
+1-abalone 3class &   0.53/  0.03 &   0.52/  0.04 & \textcolor{red}{\textbf{  0.49}}/  0.06 & \textcolor{red}{\textbf{  0.49}}/  0.03 & \textcolor{blue}{\textbf{  0.54}}/  0.03 & \textcolor{blue}{\textbf{  0.54}}/  0.03 & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} &   0.52/  0.03 &   0.53/  0.03 & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} &   0.52/  0.05 \\
 2-arcene &   0.76/  0.05 &   0.79/\textcolor{black}{\textbf{  0.04}} &   0.79/\textcolor{black}{\textbf{  0.04}} &   0.76/  0.05 &   0.79/  0.05 &   0.79/\textcolor{black}{\textbf{  0.04}} &   0.76/  0.05 & \textcolor{red}{\textbf{  0.75}}/  0.05 &   0.80/  0.05 &   0.79/  0.05 &   0.78/\textcolor{black}{\textbf{  0.04}} \\
 3-artificial charact... &   0.38/  0.02 &   0.34/  0.02 &   0.29/  0.02 & \textcolor{red}{\textbf{  0.25}}/  0.02 &   0.40/  0.02 & \textcolor{blue}{\textbf{  0.41}}/  0.02 & \textcolor{blue}{\textbf{  0.41}}/\textcolor{black}{\textbf{  0.01}} &   0.36/\textcolor{black}{\textbf{  0.01}} &   0.38/  0.02 &   0.30/  0.02 &   0.27/  0.02 \\
 4-autoUniv au1 1000 &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.54/  0.03 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.54/  0.03 & \textcolor{red}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.53}}/  0.03 &   0.54/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.02}} \\
@@ -70,13 +76,17 @@
 29-ionosphere &   0.77/  0.04 & \textcolor{red}{\textbf{  0.66}}/  0.06 &   0.73/  0.04 &   0.67/  0.04 &   0.76/  0.06 & \textcolor{black}{\textbf{  0.79}}/  0.06 &   0.78/  0.05 &   0.72/  0.06 & \underline{\textcolor{blue}{\textbf{  0.80}}}/  0.05 &   0.77/  0.04 & \textcolor{black}{\textbf{  0.79}}/  0.04 \\
 30-iris &   0.94/  0.03 &   0.94/  0.03 & \textcolor{blue}{\textbf{  0.95}}/  0.03 &   0.94/  0.03 &   0.94/  0.03 &   0.94/  0.03 &   0.94/  0.03 & \textcolor{red}{\textbf{  0.91}}/  0.04 & \textcolor{blue}{\textbf{  0.95}}/\textcolor{black}{\textbf{  0.02}} &   0.94/  0.03 &   0.94/  0.03 \\
 31-kr vs kp &   0.76/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.77}}/  0.02 & \textcolor{blue}{\textbf{  0.77}}/  0.02 &   0.76/  0.02 & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.01}} &   0.76/\textcolor{black}{\textbf{  0.01}} &   0.76/\textcolor{black}{\textbf{  0.01}} &   0.73/  0.02 &   0.76/\textcolor{black}{\textbf{  0.01}} &   0.69/  0.03 & \textcolor{red}{\textbf{  0.68}}/  0.03 \\
-32-leaf & \textcolor{blue}{\textbf{  0.54}}/  0.04 &   0.50/\textcolor{black}{\textbf{  0.03}} &   0.49/\textcolor{black}{\textbf{  0.03}} &   0.49/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.54}}/  0.04 & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.03}} &   0.53/\textcolor{black}{\textbf{  0.03}} &   0.52/  0.05 &   0.53/\textcolor{black}{\textbf{  0.03}} &   0.50/  0.05 & \textcolor{red}{\textbf{  0.47}}/\textcolor{black}{\textbf{  0.03}} \\\end{tabular}}\label{strats0b5NN}
+32-leaf & \textcolor{blue}{\textbf{  0.54}}/  0.04 &   0.50/\textcolor{black}{\textbf{  0.03}} &   0.49/\textcolor{black}{\textbf{  0.03}} &   0.49/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.54}}/  0.04 & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.03}} &   0.53/\textcolor{black}{\textbf{  0.03}} &   0.52/  0.05 &   0.53/\textcolor{black}{\textbf{  0.03}} &   0.50/  0.05 & \textcolor{red}{\textbf{  0.47}}/\textcolor{black}{\textbf{  0.03}} \\\end{tabular}
+}\label{strats0b5NN}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador 5NN. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 33-leukemia haslinger &   0.79/  0.08 & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.80}}/  0.07 &   0.79/  0.08 & \textcolor{blue}{\textbf{  0.80}}/  0.08 & \textcolor{blue}{\textbf{  0.80}}/  0.07 &   0.79/  0.08 & \textcolor{blue}{\textbf{  0.80}}/  0.08 &   0.79/  0.08 &   0.77/  0.08 &   0.79/  0.07 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\
+ \hline 
+33-leukemia haslinger &   0.79/  0.08 & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.80}}/  0.07 &   0.79/  0.08 & \textcolor{blue}{\textbf{  0.80}}/  0.08 & \textcolor{blue}{\textbf{  0.80}}/  0.07 &   0.79/  0.08 & \textcolor{blue}{\textbf{  0.80}}/  0.08 &   0.79/  0.08 &   0.77/  0.08 &   0.79/  0.07 \\
 34-mammographic mass & \textcolor{black}{\textbf{  0.74}}/\textcolor{black}{\textbf{  0.03}} &   0.72/  0.04 &   0.73/\textcolor{black}{\textbf{  0.03}} &   0.73/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.74}}/\textcolor{black}{\textbf{  0.03}} &   0.71/\textcolor{black}{\textbf{  0.03}} &   0.72/\textcolor{black}{\textbf{  0.03}} &   0.73/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.74}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.68}}/  0.05 &   0.70/\textcolor{black}{\textbf{  0.03}} \\
 35-mfeat fourier &   0.64/  0.03 &   0.63/  0.02 & \underline{\textcolor{blue}{\textbf{  0.68}}}/  0.02 & \textcolor{black}{\textbf{  0.67}}/  0.02 & \textcolor{black}{\textbf{  0.67}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.67}}/  0.02 & \textcolor{black}{\textbf{  0.67}}/  0.02 &   0.66/\textcolor{black}{\textbf{  0.01}} &   0.64/  0.03 &   0.64/  0.02 &   0.63/  0.03 \\
 36-molecular promotor... & \textcolor{black}{\textbf{  0.78}}/  0.06 &   0.77/  0.07 &   0.77/  0.06 &   0.77/  0.07 &   0.77/  0.06 & \textcolor{black}{\textbf{  0.78}}/  0.06 & \textcolor{black}{\textbf{  0.78}}/  0.07 &   0.77/  0.07 & \textcolor{black}{\textbf{  0.78}}/  0.06 & \textcolor{red}{\textbf{  0.76}}/  0.06 &   0.77/  0.06 \\
@@ -107,13 +117,17 @@
 61-spect heart & \textcolor{blue}{\textbf{  0.63}}/  0.04 &   0.62/  0.04 &   0.62/  0.04 & \textcolor{red}{\textbf{  0.60}}/  0.04 &   0.62/  0.04 &   0.62/  0.04 &   0.62/  0.04 &   0.62/  0.04 & \textcolor{blue}{\textbf{  0.63}}/  0.04 &   0.62/  0.04 &   0.61/  0.04 \\
 62-spectf heart &   0.60/  0.05 &   0.60/\textcolor{black}{\textbf{  0.04}} &   0.59/\textcolor{black}{\textbf{  0.04}} &   0.61/\textcolor{black}{\textbf{  0.04}} &   0.61/  0.06 &   0.59/  0.06 &   0.61/\textcolor{black}{\textbf{  0.04}} &   0.61/  0.05 &   0.60/  0.05 &   0.59/  0.05 & \textcolor{blue}{\textbf{  0.63}}/  0.06 \\
 63-statlog australian... &   0.78/  0.03 &   0.79/  0.03 &   0.78/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} &   0.78/  0.03 &   0.78/  0.03 &   0.79/\textcolor{black}{\textbf{  0.02}} &   0.78/  0.03 &   0.78/  0.03 &   0.78/\textcolor{black}{\textbf{  0.02}} &   0.79/\textcolor{black}{\textbf{  0.02}} \\
-64-statlog german cre... & \textcolor{blue}{\textbf{  0.58}}/  0.03 & \textcolor{blue}{\textbf{  0.58}}/  0.04 &   0.57/  0.04 &   0.57/  0.03 & \textcolor{blue}{\textbf{  0.58}}/  0.03 &   0.57/  0.04 &   0.57/  0.03 & \textcolor{blue}{\textbf{  0.58}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.58}}/  0.03 &   0.57/  0.03 &   0.56/  0.03 \\\end{tabular}}\label{strats1a5NN}
+64-statlog german cre... & \textcolor{blue}{\textbf{  0.58}}/  0.03 & \textcolor{blue}{\textbf{  0.58}}/  0.04 &   0.57/  0.04 &   0.57/  0.03 & \textcolor{blue}{\textbf{  0.58}}/  0.03 &   0.57/  0.04 &   0.57/  0.03 & \textcolor{blue}{\textbf{  0.58}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.58}}/  0.03 &   0.57/  0.03 &   0.56/  0.03 \\\end{tabular}
+}\label{strats1a5NN}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador 5NN. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\ \hline 33-leukemia haslinger &   0.79/  0.07 & \textcolor{red}{\textbf{  0.76}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.76}}/\textcolor{black}{\textbf{  0.06}} &   0.78/\textcolor{black}{\textbf{  0.06}} &   0.79/  0.08 &   0.78/  0.08 &   0.79/  0.07 & \textcolor{blue}{\textbf{  0.80}}/  0.07 &   0.77/  0.07 &   0.79/  0.07 &   0.79/\textcolor{black}{\textbf{  0.06}} \\
+ & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\
+ \hline 
+33-leukemia haslinger &   0.79/  0.07 & \textcolor{red}{\textbf{  0.76}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.76}}/\textcolor{black}{\textbf{  0.06}} &   0.78/\textcolor{black}{\textbf{  0.06}} &   0.79/  0.08 &   0.78/  0.08 &   0.79/  0.07 & \textcolor{blue}{\textbf{  0.80}}/  0.07 &   0.77/  0.07 &   0.79/  0.07 &   0.79/\textcolor{black}{\textbf{  0.06}} \\
 34-mammographic mass &   0.70/\textcolor{black}{\textbf{  0.03}} &   0.73/\textcolor{black}{\textbf{  0.03}} &   0.72/  0.04 & \underline{\textcolor{blue}{\textbf{  0.75}}}/\textcolor{black}{\textbf{  0.03}} &   0.70/  0.05 &   0.71/  0.04 &   0.71/  0.04 &   0.69/  0.04 &   0.73/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.74}}/  0.04 & \textcolor{black}{\textbf{  0.74}}/  0.04 \\
 35-mfeat fourier &   0.63/  0.03 &   0.58/  0.02 &   0.57/  0.02 &   0.59/  0.02 &   0.66/  0.03 & \textcolor{black}{\textbf{  0.67}}/  0.02 &   0.66/  0.02 &   0.64/  0.03 & \textcolor{black}{\textbf{  0.67}}/  0.02 &   0.56/  0.02 & \textcolor{red}{\textbf{  0.54}}/  0.03 \\
 36-molecular promotor... & \textcolor{black}{\textbf{  0.78}}/  0.06 &   0.77/\textcolor{black}{\textbf{  0.05}} &   0.77/  0.06 &   0.77/  0.06 & \textcolor{black}{\textbf{  0.78}}/\textcolor{black}{\textbf{  0.05}} & \underline{\textcolor{blue}{\textbf{  0.79}}}/\textcolor{black}{\textbf{  0.05}} &   0.77/  0.07 & \textcolor{black}{\textbf{  0.78}}/  0.06 &   0.77/\textcolor{black}{\textbf{  0.05}} &   0.77/  0.06 &   0.77/  0.07 \\
@@ -144,13 +158,17 @@
 61-spect heart &   0.62/\textcolor{black}{\textbf{  0.03}} &   0.62/  0.04 &   0.62/  0.04 & \textcolor{blue}{\textbf{  0.63}}/  0.04 &   0.61/\textcolor{black}{\textbf{  0.03}} &   0.62/\textcolor{black}{\textbf{  0.03}} &   0.61/  0.04 &   0.61/  0.04 & \textcolor{blue}{\textbf{  0.63}}/  0.04 & \textcolor{red}{\textbf{  0.60}}/  0.05 &   0.62/  0.04 \\
 62-spectf heart & \textcolor{blue}{\textbf{  0.63}}/  0.06 &   0.59/  0.05 &   0.60/  0.06 &   0.58/  0.05 &   0.60/\textcolor{black}{\textbf{  0.04}} &   0.60/  0.06 &   0.62/  0.06 &   0.61/  0.05 &   0.61/  0.07 & \textcolor{red}{\textbf{  0.57}}/  0.05 & \textcolor{red}{\textbf{  0.57}}/  0.05 \\
 63-statlog australian... &   0.79/\textcolor{black}{\textbf{  0.02}} &   0.79/  0.04 & \textcolor{black}{\textbf{  0.80}}/  0.03 &   0.78/  0.03 &   0.78/  0.03 &   0.78/  0.04 &   0.77/  0.04 & \textcolor{red}{\textbf{  0.76}}/  0.03 & \textcolor{black}{\textbf{  0.80}}/  0.04 &   0.79/  0.04 & \underline{\textcolor{blue}{\textbf{  0.81}}}/  0.03 \\
-64-statlog german cre... &   0.56/  0.03 &   0.56/  0.03 & \textcolor{red}{\textbf{  0.55}}/  0.03 &   0.57/  0.04 &   0.57/  0.03 & \textcolor{blue}{\textbf{  0.58}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.58}}/  0.03 & \textcolor{blue}{\textbf{  0.58}}/  0.03 & \textcolor{blue}{\textbf{  0.58}}/  0.03 & \textcolor{red}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.02}} &   0.56/\textcolor{black}{\textbf{  0.02}} \\\end{tabular}}\label{strats1b5NN}
+64-statlog german cre... &   0.56/  0.03 &   0.56/  0.03 & \textcolor{red}{\textbf{  0.55}}/  0.03 &   0.57/  0.04 &   0.57/  0.03 & \textcolor{blue}{\textbf{  0.58}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.58}}/  0.03 & \textcolor{blue}{\textbf{  0.58}}/  0.03 & \textcolor{blue}{\textbf{  0.58}}/  0.03 & \textcolor{red}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.02}} &   0.56/\textcolor{black}{\textbf{  0.02}} \\\end{tabular}
+}\label{strats1b5NN}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador 5NN. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 65-statlog heart &   0.75/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.76}}/  0.04 &   0.75/  0.05 &   0.75/  0.04 &   0.74/  0.04 &   0.75/  0.04 &   0.75/  0.04 &   0.74/  0.04 &   0.75/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.73}}/  0.04 &   0.74/  0.04 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\
+ \hline 
+65-statlog heart &   0.75/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.76}}/  0.04 &   0.75/  0.05 &   0.75/  0.04 &   0.74/  0.04 &   0.75/  0.04 &   0.75/  0.04 &   0.74/  0.04 &   0.75/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.73}}/  0.04 &   0.74/  0.04 \\
 66-statlog image segm... &   0.83/\textcolor{black}{\textbf{  0.01}} &   0.84/  0.02 & \textcolor{blue}{\textbf{  0.86}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.86}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.86}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.86}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.86}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.86}}/\textcolor{black}{\textbf{  0.01}} &   0.83/\textcolor{black}{\textbf{  0.01}} &   0.80/  0.02 &   0.80/  0.02 \\
 67-statlog landsat sa... &   0.78/  0.03 &   0.80/\textcolor{darkgreen}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.02}} &   0.78/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.02}} &   0.78/\textcolor{black}{\textbf{  0.02}} &   0.78/  0.03 &   0.77/  0.04 &   0.77/  0.05 \\
 68-statlog vehicle si... &   0.58/  0.03 &   0.58/  0.03 & \textcolor{blue}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.61}}/  0.03 & \textcolor{blue}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.61}}/  0.03 & \textcolor{blue}{\textbf{  0.61}}/  0.03 & \textcolor{blue}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.02}} &   0.58/  0.03 &   0.57/  0.03 &   0.59/\textcolor{black}{\textbf{  0.02}} \\
@@ -179,13 +197,17 @@
 91-wilt &   0.58/  0.04 &   0.59/  0.03 &   0.57/  0.03 &   0.58/  0.03 &   0.58/  0.03 &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.58/  0.03 &   0.58/  0.04 & \textcolor{black}{\textbf{  0.65}}/  0.03 &   0.58/  0.05 \\
 92-wine & \textcolor{red}{\textbf{  0.94}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.94}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.95}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.95}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.95}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.95}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.95}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.95}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.94}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.94}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.95}}/\textcolor{black}{\textbf{  0.02}} \\ \hline
 93-wine quality white... &   0.28/\textcolor{black}{\textbf{  0.02}} &   0.28/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.30}}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.29}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.29}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.29}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.29}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.29}}/\textcolor{black}{\textbf{  0.02}} &   0.28/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.29}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.29}}/  0.03 \\
-94-yeast 4class &   0.52/\textcolor{black}{\textbf{  0.03}} &   0.53/  0.04 &   0.53/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.03}} &   0.52/\textcolor{black}{\textbf{  0.03}} &   0.53/  0.04 &   0.52/  0.05 \\\end{tabular}}\label{strats2a5NN}
+94-yeast 4class &   0.52/\textcolor{black}{\textbf{  0.03}} &   0.53/  0.04 &   0.53/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.03}} &   0.52/\textcolor{black}{\textbf{  0.03}} &   0.53/  0.04 &   0.52/  0.05 \\\end{tabular}
+}\label{strats2a5NN}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador 5NN. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\ \hline 65-statlog heart &   0.74/  0.04 &   0.74/  0.05 &   0.74/  0.04 &   0.75/  0.05 &   0.75/  0.04 &   0.75/  0.04 &   0.75/  0.05 &   0.74/  0.04 & \textcolor{blue}{\textbf{  0.76}}/  0.04 & \textcolor{blue}{\textbf{  0.76}}/  0.04 & \textcolor{blue}{\textbf{  0.76}}/  0.04 \\
+ & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\
+ \hline 
+65-statlog heart &   0.74/  0.04 &   0.74/  0.05 &   0.74/  0.04 &   0.75/  0.05 &   0.75/  0.04 &   0.75/  0.04 &   0.75/  0.05 &   0.74/  0.04 & \textcolor{blue}{\textbf{  0.76}}/  0.04 & \textcolor{blue}{\textbf{  0.76}}/  0.04 & \textcolor{blue}{\textbf{  0.76}}/  0.04 \\
 66-statlog image segm... &   0.80/  0.02 &   0.80/  0.03 & \textcolor{red}{\textbf{  0.77}}/  0.03 &   0.79/  0.02 &   0.83/\textcolor{black}{\textbf{  0.01}} &   0.85/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.86}}/  0.02 &   0.78/  0.03 &   0.84/  0.02 &   0.79/  0.03 &   0.78/  0.02 \\
 67-statlog landsat sa... &   0.77/  0.05 &   0.69/  0.04 & \textcolor{red}{\textbf{  0.64}}/  0.05 &   0.78/\textcolor{black}{\textbf{  0.02}} &   0.79/\textcolor{black}{\textbf{  0.02}} &   0.80/\textcolor{black}{\textbf{  0.02}} &   0.80/\textcolor{black}{\textbf{  0.02}} &   0.78/  0.04 & \textcolor{blue}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.02}} &   0.76/  0.03 &   0.73/  0.04 \\
 68-statlog vehicle si... &   0.59/\textcolor{black}{\textbf{  0.02}} &   0.55/  0.03 &   0.54/  0.03 &   0.54/  0.03 &   0.60/  0.03 &   0.60/  0.03 &   0.60/  0.03 &   0.58/  0.03 &   0.59/  0.03 & \textcolor{red}{\textbf{  0.52}}/  0.04 &   0.54/  0.05 \\
@@ -214,6 +236,8 @@
 91-wilt &   0.58/  0.05 &   0.62/  0.05 &   0.60/  0.05 & \textcolor{red}{\textbf{  0.53}}/  0.05 &   0.56/  0.04 &   0.56/  0.03 &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.57/  0.03 &   0.56/  0.04 &   0.64/  0.05 & \underline{\textcolor{blue}{\textbf{  0.66}}}/  0.05 \\
 92-wine & \textcolor{blue}{\textbf{  0.95}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.94}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.94}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.94}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.95}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.95}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.95}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.94}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.95}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.94}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.94}}/  0.03 \\ \hline
 93-wine quality white... & \textcolor{black}{\textbf{  0.29}}/  0.03 & \textcolor{red}{\textbf{  0.26}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.26}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.26}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.29}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.29}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.29}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.29}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.29}}/\textcolor{black}{\textbf{  0.02}} &   0.28/\textcolor{black}{\textbf{  0.02}} &   0.28/\textcolor{black}{\textbf{  0.02}} \\
-94-yeast 4class &   0.52/  0.05 &   0.47/  0.05 &   0.47/  0.04 & \textcolor{red}{\textbf{  0.45}}/  0.04 &   0.51/  0.04 &   0.51/\textcolor{black}{\textbf{  0.03}} &   0.52/\textcolor{black}{\textbf{  0.03}} &   0.52/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.03}} &   0.51/\textcolor{black}{\textbf{  0.03}} &   0.53/\textcolor{black}{\textbf{  0.03}} \\\end{tabular}}\label{strats2b5NN}
+94-yeast 4class &   0.52/  0.05 &   0.47/  0.05 &   0.47/  0.04 & \textcolor{red}{\textbf{  0.45}}/  0.04 &   0.51/  0.04 &   0.51/\textcolor{black}{\textbf{  0.03}} &   0.52/\textcolor{black}{\textbf{  0.03}} &   0.52/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.03}} &   0.51/\textcolor{black}{\textbf{  0.03}} &   0.53/\textcolor{black}{\textbf{  0.03}} \\\end{tabular}
+}\label{strats2b5NN}
 \end{center}
 \end{table}
+                                     
