--- a/stratstabC4.5w.tex
+++ b/stratstabC4.5w.tex
@@ -2,7 +2,9 @@
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador C4.5w. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 1-abalone 3class &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{darkgreen}{\textbf{  0.01}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.50/  0.04 &   0.55/\textcolor{black}{\textbf{  0.02}} \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\
+ \hline 
+1-abalone 3class &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{darkgreen}{\textbf{  0.01}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.50/  0.04 &   0.55/\textcolor{black}{\textbf{  0.02}} \\
 2-arcene &   0.65/\textcolor{black}{\textbf{  0.03}} &   0.65/\textcolor{black}{\textbf{  0.03}} &   0.65/\textcolor{black}{\textbf{  0.03}} &   0.65/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.64}}/\textcolor{black}{\textbf{  0.03}} &   0.65/\textcolor{black}{\textbf{  0.03}} &   0.65/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.64}}/\textcolor{black}{\textbf{  0.03}} &   0.65/\textcolor{black}{\textbf{  0.03}} &   0.65/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.66}}/\textcolor{black}{\textbf{  0.03}} \\
 3-artificial charact... &   0.20/  0.02 &   0.21/\textcolor{black}{\textbf{  0.01}} &   0.21/\textcolor{black}{\textbf{  0.01}} &   0.21/\textcolor{black}{\textbf{  0.01}} &   0.21/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.22}}/\textcolor{black}{\textbf{  0.01}} &   0.21/\textcolor{black}{\textbf{  0.01}} &   0.21/\textcolor{black}{\textbf{  0.01}} &   0.20/\textcolor{black}{\textbf{  0.01}} &   0.21/\textcolor{black}{\textbf{  0.01}} &   0.20/\textcolor{black}{\textbf{  0.01}} \\
 4-autoUniv au1 1000 & \textcolor{red}{\textbf{  0.54}}/  0.03 &   0.55/  0.03 &   0.56/\textcolor{black}{\textbf{  0.02}} &   0.56/\textcolor{black}{\textbf{  0.02}} &   0.55/  0.03 & \textcolor{red}{\textbf{  0.54}}/  0.03 &   0.56/  0.03 &   0.55/  0.03 & \textcolor{red}{\textbf{  0.54}}/  0.03 &   0.57/  0.03 &   0.55/\textcolor{black}{\textbf{  0.02}} \\
@@ -33,13 +35,17 @@
 29-ionosphere &   0.81/\textcolor{black}{\textbf{  0.03}} &   0.82/  0.04 &   0.82/\textcolor{black}{\textbf{  0.03}} &   0.82/\textcolor{black}{\textbf{  0.03}} &   0.82/\textcolor{black}{\textbf{  0.03}} &   0.82/  0.04 &   0.82/  0.04 &   0.82/  0.04 &   0.82/  0.04 & \textcolor{blue}{\textbf{  0.83}}/\textcolor{black}{\textbf{  0.03}} &   0.82/  0.04 \\
 30-iris &   0.85/\textcolor{black}{\textbf{  0.03}} &   0.86/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.87}}/\textcolor{black}{\textbf{  0.03}} &   0.86/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.87}}/\textcolor{black}{\textbf{  0.03}} &   0.86/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.87}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.87}}/\textcolor{black}{\textbf{  0.03}} &   0.86/\textcolor{black}{\textbf{  0.03}} &   0.85/  0.04 &   0.86/\textcolor{black}{\textbf{  0.03}} \\
 31-kr vs kp &   0.87/  0.02 &   0.87/  0.02 & \textcolor{blue}{\textbf{  0.89}}/\textcolor{black}{\textbf{  0.01}} &   0.88/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.89}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.89}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.89}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.89}}/\textcolor{black}{\textbf{  0.01}} &   0.87/  0.02 &   0.88/\textcolor{black}{\textbf{  0.01}} &   0.86/  0.04 \\
-32-leaf &   0.22/\textcolor{black}{\textbf{  0.01}} &   0.22/  0.02 &   0.22/  0.02 & \textcolor{blue}{\textbf{  0.23}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.23}}/\textcolor{black}{\textbf{  0.01}} &   0.22/  0.02 & \textcolor{blue}{\textbf{  0.23}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.23}}/\textcolor{black}{\textbf{  0.01}} &   0.22/\textcolor{black}{\textbf{  0.01}} &   0.21/\textcolor{black}{\textbf{  0.01}} &   0.21/\textcolor{black}{\textbf{  0.01}} \\\end{tabular}}\label{strats0aC4.5w}
+32-leaf &   0.22/\textcolor{black}{\textbf{  0.01}} &   0.22/  0.02 &   0.22/  0.02 & \textcolor{blue}{\textbf{  0.23}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.23}}/\textcolor{black}{\textbf{  0.01}} &   0.22/  0.02 & \textcolor{blue}{\textbf{  0.23}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.23}}/\textcolor{black}{\textbf{  0.01}} &   0.22/\textcolor{black}{\textbf{  0.01}} &   0.21/\textcolor{black}{\textbf{  0.01}} &   0.21/\textcolor{black}{\textbf{  0.01}} \\\end{tabular}
+}\label{strats0aC4.5w}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador C4.5w. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\ \hline 1-abalone 3class &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.46/  0.03 &   0.46/  0.04 & \textcolor{red}{\textbf{  0.40}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.53/  0.04 \\
+ & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\
+ \hline 
+1-abalone 3class &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.46/  0.03 &   0.46/  0.04 & \textcolor{red}{\textbf{  0.40}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.53/  0.04 \\
 2-arcene & \textcolor{blue}{\textbf{  0.66}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.64}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.64}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.64}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.66}}/\textcolor{black}{\textbf{  0.03}} &   0.65/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.64}}/\textcolor{black}{\textbf{  0.03}} &   0.65/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.66}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.64}}/  0.04 & \textcolor{red}{\textbf{  0.64}}/  0.04 \\
 3-artificial charact... &   0.20/  0.02 & \textcolor{red}{\textbf{  0.12}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.12}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.12}}/\textcolor{black}{\textbf{  0.01}} &   0.21/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.22}}/\textcolor{black}{\textbf{  0.01}} &   0.21/\textcolor{black}{\textbf{  0.01}} &   0.20/  0.02 &   0.20/  0.02 &   0.20/\textcolor{black}{\textbf{  0.01}} &   0.18/  0.02 \\
 4-autoUniv au1 1000 &   0.55/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.58}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.58}}/\textcolor{black}{\textbf{  0.02}} &   0.57/  0.03 & \textcolor{red}{\textbf{  0.54}}/  0.03 &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.58}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.58}}/\textcolor{black}{\textbf{  0.02}} \\
@@ -70,13 +76,17 @@
 29-ionosphere &   0.82/  0.04 &   0.68/\textcolor{black}{\textbf{  0.03}} &   0.67/  0.04 & \textcolor{red}{\textbf{  0.64}}/\textcolor{black}{\textbf{  0.03}} &   0.80/  0.06 &   0.82/  0.05 &   0.79/  0.06 &   0.81/  0.04 & \textcolor{blue}{\textbf{  0.83}}/  0.04 &   0.81/\textcolor{black}{\textbf{  0.03}} &   0.81/\textcolor{black}{\textbf{  0.03}} \\
 30-iris &   0.86/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.03}} &   0.82/\textcolor{black}{\textbf{  0.03}} &   0.83/\textcolor{black}{\textbf{  0.03}} &   0.86/  0.04 & \textcolor{blue}{\textbf{  0.87}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.87}}/\textcolor{black}{\textbf{  0.03}} &   0.86/  0.04 &   0.86/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.87}}/  0.04 &   0.86/  0.04 \\
 31-kr vs kp &   0.86/  0.04 &   0.78/  0.02 &   0.77/  0.03 &   0.74/  0.04 &   0.88/  0.03 & \textcolor{blue}{\textbf{  0.89}}/\textcolor{black}{\textbf{  0.01}} &   0.88/  0.03 &   0.87/  0.02 & \textcolor{blue}{\textbf{  0.89}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.73}}/  0.05 & \textcolor{red}{\textbf{  0.73}}/  0.06 \\
-32-leaf &   0.22/  0.02 &   0.21/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.20}}/  0.02 & \textcolor{red}{\textbf{  0.20}}/  0.02 &   0.22/  0.02 & \textcolor{blue}{\textbf{  0.23}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.23}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.23}}/\textcolor{black}{\textbf{  0.01}} &   0.22/\textcolor{black}{\textbf{  0.01}} &   0.22/\textcolor{black}{\textbf{  0.01}} &   0.21/  0.02 \\\end{tabular}}\label{strats0bC4.5w}
+32-leaf &   0.22/  0.02 &   0.21/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.20}}/  0.02 & \textcolor{red}{\textbf{  0.20}}/  0.02 &   0.22/  0.02 & \textcolor{blue}{\textbf{  0.23}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.23}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.23}}/\textcolor{black}{\textbf{  0.01}} &   0.22/\textcolor{black}{\textbf{  0.01}} &   0.22/\textcolor{black}{\textbf{  0.01}} &   0.21/  0.02 \\\end{tabular}
+}\label{strats0bC4.5w}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador C4.5w. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 33-leukemia haslinger & \textcolor{black}{\textbf{  0.68}}/  0.06 & \textcolor{black}{\textbf{  0.68}}/  0.06 & \textcolor{black}{\textbf{  0.68}}/  0.05 & \textcolor{black}{\textbf{  0.68}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.68}}/  0.05 & \textcolor{black}{\textbf{  0.68}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.68}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.68}}/  0.05 & \textcolor{black}{\textbf{  0.68}}/  0.06 & \textcolor{black}{\textbf{  0.68}}/  0.05 & \textcolor{red}{\textbf{  0.67}}/  0.07 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\
+ \hline 
+33-leukemia haslinger & \textcolor{black}{\textbf{  0.68}}/  0.06 & \textcolor{black}{\textbf{  0.68}}/  0.06 & \textcolor{black}{\textbf{  0.68}}/  0.05 & \textcolor{black}{\textbf{  0.68}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.68}}/  0.05 & \textcolor{black}{\textbf{  0.68}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.68}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.68}}/  0.05 & \textcolor{black}{\textbf{  0.68}}/  0.06 & \textcolor{black}{\textbf{  0.68}}/  0.05 & \textcolor{red}{\textbf{  0.67}}/  0.07 \\
 34-mammographic mass &   0.79/\textcolor{black}{\textbf{  0.02}} &   0.79/  0.03 &   0.79/  0.03 &   0.79/\textcolor{black}{\textbf{  0.02}} &   0.79/  0.03 &   0.79/  0.03 &   0.79/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} &   0.79/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.80}}/  0.03 &   0.79/  0.03 \\
 35-mfeat fourier &   0.45/  0.02 &   0.42/  0.03 & \textcolor{blue}{\textbf{  0.47}}/  0.02 & \textcolor{blue}{\textbf{  0.47}}/  0.02 & \textcolor{blue}{\textbf{  0.47}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.47}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.47}}/  0.02 & \textcolor{blue}{\textbf{  0.47}}/  0.02 &   0.43/  0.02 &   0.41/  0.02 &   0.44/  0.02 \\
 36-molecular promotor... & \textcolor{blue}{\textbf{  0.73}}/  0.04 &   0.71/  0.04 & \textcolor{blue}{\textbf{  0.73}}/  0.04 &   0.72/  0.04 &   0.72/  0.04 &   0.72/  0.04 &   0.72/  0.05 &   0.72/  0.04 & \textcolor{blue}{\textbf{  0.73}}/  0.04 &   0.72/  0.04 & \textcolor{blue}{\textbf{  0.73}}/\textcolor{black}{\textbf{  0.03}} \\
@@ -107,13 +117,17 @@
 61-spect heart &   0.64/\textcolor{black}{\textbf{  0.04}} &   0.64/  0.05 &   0.64/  0.05 &   0.64/\textcolor{black}{\textbf{  0.04}} &   0.64/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.65}}/\textcolor{black}{\textbf{  0.04}} &   0.64/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.65}}/\textcolor{black}{\textbf{  0.04}} &   0.64/\textcolor{black}{\textbf{  0.04}} &   0.64/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.65}}/\textcolor{black}{\textbf{  0.04}} \\
 62-spectf heart &   0.60/  0.04 &   0.60/  0.04 & \textcolor{blue}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.61}}/  0.04 & \textcolor{blue}{\textbf{  0.61}}/  0.04 &   0.60/  0.04 & \textcolor{blue}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.03}} &   0.60/  0.04 & \textcolor{red}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.03}} &   0.60/\textcolor{black}{\textbf{  0.03}} \\
 63-statlog australian... &   0.81/  0.03 &   0.82/  0.03 &   0.82/  0.03 & \textcolor{blue}{\textbf{  0.83}}/\textcolor{black}{\textbf{  0.02}} &   0.82/  0.03 & \textcolor{blue}{\textbf{  0.83}}/  0.03 & \textcolor{blue}{\textbf{  0.83}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.83}}/  0.03 &   0.81/  0.03 &   0.82/\textcolor{black}{\textbf{  0.02}} &   0.82/  0.03 \\
-64-statlog german cre... &   0.58/  0.03 &   0.59/  0.03 &   0.59/\textcolor{black}{\textbf{  0.02}} &   0.59/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.60}}/  0.03 &   0.59/\textcolor{black}{\textbf{  0.02}} &   0.59/  0.03 & \textcolor{blue}{\textbf{  0.60}}/  0.03 &   0.59/  0.03 &   0.59/\textcolor{black}{\textbf{  0.02}} &   0.58/  0.04 \\\end{tabular}}\label{strats1aC4.5w}
+64-statlog german cre... &   0.58/  0.03 &   0.59/  0.03 &   0.59/\textcolor{black}{\textbf{  0.02}} &   0.59/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.60}}/  0.03 &   0.59/\textcolor{black}{\textbf{  0.02}} &   0.59/  0.03 & \textcolor{blue}{\textbf{  0.60}}/  0.03 &   0.59/  0.03 &   0.59/\textcolor{black}{\textbf{  0.02}} &   0.58/  0.04 \\\end{tabular}
+}\label{strats1aC4.5w}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador C4.5w. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\ \hline 33-leukemia haslinger & \textcolor{red}{\textbf{  0.67}}/  0.07 & \textcolor{black}{\textbf{  0.68}}/  0.05 & \textcolor{black}{\textbf{  0.68}}/  0.05 & \textcolor{black}{\textbf{  0.68}}/  0.05 & \textcolor{black}{\textbf{  0.68}}/  0.06 & \textcolor{black}{\textbf{  0.68}}/  0.06 & \textcolor{black}{\textbf{  0.68}}/  0.05 & \textcolor{black}{\textbf{  0.68}}/  0.06 & \textcolor{black}{\textbf{  0.68}}/  0.06 & \underline{\textcolor{blue}{\textbf{  0.69}}}/  0.05 & \textcolor{black}{\textbf{  0.68}}/  0.05 \\
+ & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\
+ \hline 
+33-leukemia haslinger & \textcolor{red}{\textbf{  0.67}}/  0.07 & \textcolor{black}{\textbf{  0.68}}/  0.05 & \textcolor{black}{\textbf{  0.68}}/  0.05 & \textcolor{black}{\textbf{  0.68}}/  0.05 & \textcolor{black}{\textbf{  0.68}}/  0.06 & \textcolor{black}{\textbf{  0.68}}/  0.06 & \textcolor{black}{\textbf{  0.68}}/  0.05 & \textcolor{black}{\textbf{  0.68}}/  0.06 & \textcolor{black}{\textbf{  0.68}}/  0.06 & \underline{\textcolor{blue}{\textbf{  0.69}}}/  0.05 & \textcolor{black}{\textbf{  0.68}}/  0.05 \\
 34-mammographic mass &   0.79/  0.03 &   0.77/  0.03 & \textcolor{red}{\textbf{  0.75}}/  0.04 &   0.77/\textcolor{black}{\textbf{  0.02}} &   0.78/  0.03 &   0.79/\textcolor{black}{\textbf{  0.02}} &   0.78/  0.04 &   0.79/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} &   0.79/  0.03 &   0.79/  0.03 \\
 35-mfeat fourier &   0.45/  0.02 & \textcolor{red}{\textbf{  0.33}}/  0.04 &   0.35/  0.03 & \textcolor{red}{\textbf{  0.33}}/  0.02 &   0.46/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.47}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.47}}/  0.02 &   0.46/  0.02 &   0.45/  0.02 &   0.39/  0.03 &   0.38/  0.03 \\
 36-molecular promotor... & \textcolor{blue}{\textbf{  0.73}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.65}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.65}}/  0.04 &   0.70/  0.05 & \textcolor{blue}{\textbf{  0.73}}/  0.04 & \textcolor{blue}{\textbf{  0.73}}/  0.04 &   0.72/  0.04 & \textcolor{blue}{\textbf{  0.73}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.73}}/\textcolor{black}{\textbf{  0.03}} &   0.71/\textcolor{black}{\textbf{  0.03}} &   0.71/  0.04 \\
@@ -144,13 +158,17 @@
 61-spect heart & \textcolor{blue}{\textbf{  0.65}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.62}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.62}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.62}}/  0.05 &   0.64/  0.05 &   0.63/  0.05 &   0.64/\textcolor{black}{\textbf{  0.04}} &   0.64/  0.05 & \textcolor{blue}{\textbf{  0.65}}/  0.05 & \textcolor{blue}{\textbf{  0.65}}/  0.05 & \textcolor{blue}{\textbf{  0.65}}/  0.05 \\
 62-spectf heart &   0.60/\textcolor{black}{\textbf{  0.03}} &   0.60/  0.04 & \textcolor{blue}{\textbf{  0.61}}/  0.04 & \textcolor{red}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.03}} &   0.60/  0.04 &   0.60/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.61}}/  0.04 & \textcolor{blue}{\textbf{  0.61}}/  0.04 &   0.60/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.03}} \\
 63-statlog australian... &   0.82/  0.03 & \textcolor{blue}{\textbf{  0.83}}/\textcolor{black}{\textbf{  0.02}} &   0.82/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.80}}/  0.03 &   0.82/  0.03 & \textcolor{blue}{\textbf{  0.83}}/  0.03 & \textcolor{blue}{\textbf{  0.83}}/  0.03 &   0.82/  0.03 &   0.82/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.80}}/  0.04 &   0.81/  0.03 \\
-64-statlog german cre... &   0.58/  0.04 &   0.57/\textcolor{black}{\textbf{  0.02}} &   0.56/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.02}} &   0.59/  0.03 &   0.59/  0.03 &   0.59/  0.03 &   0.59/  0.03 & \textcolor{blue}{\textbf{  0.60}}/\textcolor{black}{\textbf{  0.02}} &   0.58/\textcolor{black}{\textbf{  0.02}} &   0.58/\textcolor{black}{\textbf{  0.02}} \\\end{tabular}}\label{strats1bC4.5w}
+64-statlog german cre... &   0.58/  0.04 &   0.57/\textcolor{black}{\textbf{  0.02}} &   0.56/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.02}} &   0.59/  0.03 &   0.59/  0.03 &   0.59/  0.03 &   0.59/  0.03 & \textcolor{blue}{\textbf{  0.60}}/\textcolor{black}{\textbf{  0.02}} &   0.58/\textcolor{black}{\textbf{  0.02}} &   0.58/\textcolor{black}{\textbf{  0.02}} \\\end{tabular}
+}\label{strats1bC4.5w}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador C4.5w. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 65-statlog heart & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} &   0.74/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} &   0.74/\textcolor{black}{\textbf{  0.03}} &   0.74/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/  0.04 & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/  0.04 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\
+ \hline 
+65-statlog heart & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} &   0.74/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} &   0.74/\textcolor{black}{\textbf{  0.03}} &   0.74/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/  0.04 & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/  0.04 \\
 66-statlog image segm... &   0.68/\textcolor{black}{\textbf{  0.01}} &   0.66/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.70}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.70}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.70}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.70}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.70}}/\textcolor{black}{\textbf{  0.01}} &   0.69/\textcolor{black}{\textbf{  0.01}} &   0.67/  0.02 &   0.62/  0.03 &   0.68/  0.02 \\
 67-statlog landsat sa... &   0.58/  0.02 &   0.60/  0.02 &   0.60/\textcolor{black}{\textbf{  0.01}} &   0.60/\textcolor{black}{\textbf{  0.01}} &   0.59/  0.02 &   0.59/\textcolor{black}{\textbf{  0.01}} &   0.60/\textcolor{black}{\textbf{  0.01}} &   0.60/  0.02 &   0.60/  0.02 &   0.55/  0.02 &   0.60/  0.02 \\
 68-statlog vehicle si... &   0.54/  0.03 &   0.54/  0.03 &   0.56/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} &   0.56/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} &   0.55/  0.03 &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/  0.03 \\
@@ -179,13 +197,17 @@
 91-wilt &   0.62/  0.08 &   0.61/  0.07 &   0.56/  0.05 &   0.56/\textcolor{black}{\textbf{  0.04}} &   0.57/  0.06 &   0.57/  0.06 &   0.58/  0.06 &   0.56/\textcolor{black}{\textbf{  0.04}} &   0.63/  0.08 & \textcolor{black}{\textbf{  0.76}}/\textcolor{black}{\textbf{  0.04}} &   0.63/  0.07 \\
 92-wine &   0.81/  0.03 &   0.82/\textcolor{black}{\textbf{  0.02}} &   0.82/  0.04 &   0.81/  0.03 &   0.81/  0.03 &   0.81/  0.04 &   0.82/  0.03 &   0.82/  0.03 &   0.82/  0.03 & \underline{\textcolor{blue}{\textbf{  0.85}}}/  0.03 &   0.81/  0.03 \\ \hline
 93-wine quality white... &   0.26/\textcolor{black}{\textbf{  0.01}} &   0.26/\textcolor{black}{\textbf{  0.01}} &   0.26/\textcolor{black}{\textbf{  0.01}} &   0.26/  0.02 &   0.26/\textcolor{black}{\textbf{  0.01}} &   0.26/\textcolor{black}{\textbf{  0.01}} &   0.26/\textcolor{black}{\textbf{  0.01}} &   0.26/\textcolor{black}{\textbf{  0.01}} &   0.26/\textcolor{black}{\textbf{  0.01}} &   0.25/\textcolor{black}{\textbf{  0.01}} &   0.26/  0.02 \\
-94-yeast 4class &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/  0.03 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.02}} &   0.54/  0.03 &   0.54/  0.03 &   0.54/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.02}} &   0.54/  0.03 &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.54/  0.03 &   0.54/  0.05 \\\end{tabular}}\label{strats2aC4.5w}
+94-yeast 4class &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/  0.03 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.02}} &   0.54/  0.03 &   0.54/  0.03 &   0.54/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.02}} &   0.54/  0.03 &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.54/  0.03 &   0.54/  0.05 \\\end{tabular}
+}\label{strats2aC4.5w}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador C4.5w. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\ \hline 65-statlog heart & \textcolor{blue}{\textbf{  0.75}}/  0.04 &   0.73/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.72}}/\textcolor{black}{\textbf{  0.03}} &   0.74/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} &   0.74/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/  0.04 &   0.74/\textcolor{black}{\textbf{  0.03}} \\
+ & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\
+ \hline 
+65-statlog heart & \textcolor{blue}{\textbf{  0.75}}/  0.04 &   0.73/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.72}}/\textcolor{black}{\textbf{  0.03}} &   0.74/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} &   0.74/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.75}}/  0.04 &   0.74/\textcolor{black}{\textbf{  0.03}} \\
 66-statlog image segm... &   0.69/  0.02 &   0.41/  0.02 &   0.40/  0.03 & \textcolor{red}{\textbf{  0.39}}/  0.02 & \textcolor{black}{\textbf{  0.70}}/\textcolor{black}{\textbf{  0.01}} & \underline{\textcolor{blue}{\textbf{  0.71}}}/  0.02 & \textcolor{black}{\textbf{  0.70}}/\textcolor{black}{\textbf{  0.01}} &   0.69/\textcolor{black}{\textbf{  0.01}} &   0.69/  0.02 &   0.66/  0.02 &   0.66/  0.02 \\
 67-statlog landsat sa... & \textcolor{blue}{\textbf{  0.61}}/  0.03 &   0.30/  0.02 & \textcolor{red}{\textbf{  0.22}}/\textcolor{black}{\textbf{  0.01}} &   0.44/  0.03 &   0.60/  0.02 &   0.60/  0.02 & \textcolor{blue}{\textbf{  0.61}}/  0.02 &   0.60/  0.02 & \textcolor{blue}{\textbf{  0.61}}/  0.02 &   0.60/  0.03 &   0.57/  0.03 \\
 68-statlog vehicle si... &   0.55/  0.03 &   0.49/  0.05 & \textcolor{red}{\textbf{  0.46}}/  0.04 &   0.47/  0.03 &   0.56/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.51/  0.03 &   0.49/  0.05 \\
@@ -214,6 +236,8 @@
 91-wilt &   0.63/  0.07 &   0.74/\textcolor{black}{\textbf{  0.04}} &   0.73/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{darkgreen}{\textbf{  0.00}} &   0.57/  0.06 &   0.58/  0.07 &   0.56/\textcolor{black}{\textbf{  0.04}} &   0.62/  0.07 &   0.68/  0.07 & \textcolor{black}{\textbf{  0.76}}/  0.06 & \underline{\textcolor{blue}{\textbf{  0.78}}}/\textcolor{black}{\textbf{  0.04}} \\
 92-wine &   0.81/  0.03 & \textcolor{red}{\textbf{  0.77}}/  0.05 &   0.78/  0.05 &   0.80/  0.03 &   0.82/  0.04 &   0.80/  0.05 &   0.81/  0.03 &   0.81/  0.04 & \textcolor{black}{\textbf{  0.83}}/  0.03 &   0.82/  0.03 &   0.82/\textcolor{black}{\textbf{  0.02}} \\ \hline
 93-wine quality white... &   0.26/  0.02 &   0.23/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.22}}/\textcolor{black}{\textbf{  0.01}} &   0.24/\textcolor{black}{\textbf{  0.01}} &   0.26/\textcolor{black}{\textbf{  0.01}} &   0.26/  0.02 &   0.26/  0.02 &   0.26/\textcolor{black}{\textbf{  0.01}} &   0.26/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.27}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.27}}/  0.02 \\
-94-yeast 4class &   0.53/  0.06 &   0.33/  0.04 & \textcolor{red}{\textbf{  0.30}}/  0.03 &   0.33/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.55}}/  0.03 &   0.54/  0.03 &   0.54/  0.03 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.02}} &   0.53/  0.03 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.02}} \\\end{tabular}}\label{strats2bC4.5w}
+94-yeast 4class &   0.53/  0.06 &   0.33/  0.04 & \textcolor{red}{\textbf{  0.30}}/  0.03 &   0.33/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.55}}/  0.03 &   0.54/  0.03 &   0.54/  0.03 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.02}} &   0.53/  0.03 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.02}} \\\end{tabular}
+}\label{strats2bC4.5w}
 \end{center}
 \end{table}
+                                     
