--- a/stratstabCIELM.tex
+++ b/stratstabCIELM.tex
@@ -2,7 +2,9 @@
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador CIELM. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 1-abalone 3class &   0.47/  0.02 &   0.47/  0.02 &   0.49/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.50}}/  0.02 &   0.49/  0.02 &   0.49/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.50}}/  0.02 &   0.49/  0.02 &   0.48/  0.02 &   0.44/  0.03 &   0.48/  0.02 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\
+ \hline 
+1-abalone 3class &   0.47/  0.02 &   0.47/  0.02 &   0.49/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.50}}/  0.02 &   0.49/  0.02 &   0.49/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.50}}/  0.02 &   0.49/  0.02 &   0.48/  0.02 &   0.44/  0.03 &   0.48/  0.02 \\
 2-arcene & \textcolor{red}{\textbf{  0.54}}/  0.02 & \textcolor{red}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.54}}/  0.02 & \textcolor{red}{\textbf{  0.54}}/  0.02 & \textcolor{blue}{\textbf{  0.55}}/  0.02 & \textcolor{red}{\textbf{  0.54}}/  0.02 & \textcolor{red}{\textbf{  0.54}}/  0.02 & \textcolor{red}{\textbf{  0.54}}/  0.02 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.54}}/  0.02 & \textcolor{red}{\textbf{  0.54}}/  0.02 \\
 3-artificial charact... &   0.18/  0.01 &   0.17/  0.01 & \textcolor{blue}{\textbf{  0.19}}/  0.01 &   0.18/  0.01 & \textcolor{blue}{\textbf{  0.19}}/  0.01 & \textcolor{blue}{\textbf{  0.19}}/  0.01 &   0.18/  0.01 & \textcolor{blue}{\textbf{  0.19}}/  0.01 &   0.17/  0.01 &   0.17/  0.01 &   0.15/  0.01 \\
 4-autoUniv au1 1000 & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.01}} \\
@@ -33,13 +35,17 @@
 29-ionosphere &   0.67/\textcolor{black}{\textbf{  0.02}} &   0.68/\textcolor{black}{\textbf{  0.02}} &   0.68/\textcolor{black}{\textbf{  0.02}} &   0.68/\textcolor{black}{\textbf{  0.02}} &   0.68/\textcolor{black}{\textbf{  0.02}} &   0.68/\textcolor{black}{\textbf{  0.02}} &   0.68/\textcolor{black}{\textbf{  0.02}} &   0.68/\textcolor{black}{\textbf{  0.02}} &   0.68/\textcolor{black}{\textbf{  0.02}} &   0.67/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.69}}/\textcolor{black}{\textbf{  0.02}} \\
 30-iris &   0.67/  0.04 &   0.66/  0.04 & \textcolor{blue}{\textbf{  0.68}}/  0.04 & \textcolor{blue}{\textbf{  0.68}}/  0.04 &   0.67/  0.04 & \textcolor{blue}{\textbf{  0.68}}/  0.04 & \textcolor{blue}{\textbf{  0.68}}/  0.04 &   0.67/  0.04 &   0.67/  0.04 &   0.63/  0.04 &   0.65/  0.05 \\
 31-kr vs kp &   0.65/\textcolor{black}{\textbf{  0.01}} &   0.65/\textcolor{black}{\textbf{  0.01}} &   0.66/\textcolor{black}{\textbf{  0.01}} &   0.66/\textcolor{black}{\textbf{  0.01}} &   0.65/\textcolor{black}{\textbf{  0.01}} &   0.66/\textcolor{black}{\textbf{  0.01}} &   0.66/\textcolor{black}{\textbf{  0.01}} &   0.65/\textcolor{black}{\textbf{  0.01}} &   0.66/\textcolor{black}{\textbf{  0.01}} &   0.64/\textcolor{black}{\textbf{  0.01}} &   0.66/  0.02 \\
-32-leaf &   0.17/  0.01 &   0.16/  0.01 & \textcolor{black}{\textbf{  0.19}}/  0.01 & \textcolor{black}{\textbf{  0.19}}/  0.01 &   0.18/  0.01 & \textcolor{black}{\textbf{  0.19}}/  0.01 & \textcolor{black}{\textbf{  0.19}}/  0.01 &   0.18/  0.01 &   0.17/  0.01 &   0.15/  0.01 &   0.15/  0.01 \\\end{tabular}}\label{strats0aCIELM}
+32-leaf &   0.17/  0.01 &   0.16/  0.01 & \textcolor{black}{\textbf{  0.19}}/  0.01 & \textcolor{black}{\textbf{  0.19}}/  0.01 &   0.18/  0.01 & \textcolor{black}{\textbf{  0.19}}/  0.01 & \textcolor{black}{\textbf{  0.19}}/  0.01 &   0.18/  0.01 &   0.17/  0.01 &   0.15/  0.01 &   0.15/  0.01 \\\end{tabular}
+}\label{strats0aCIELM}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador CIELM. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\ \hline 1-abalone 3class &   0.49/  0.02 &   0.44/  0.02 &   0.44/  0.02 &   0.46/  0.02 &   0.49/  0.02 & \textcolor{blue}{\textbf{  0.50}}/  0.02 & \textcolor{blue}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.01}} &   0.47/  0.02 & \textcolor{red}{\textbf{  0.43}}/  0.02 &   0.47/  0.02 &   0.45/  0.03 \\
+ & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\
+ \hline 
+1-abalone 3class &   0.49/  0.02 &   0.44/  0.02 &   0.44/  0.02 &   0.46/  0.02 &   0.49/  0.02 & \textcolor{blue}{\textbf{  0.50}}/  0.02 & \textcolor{blue}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.01}} &   0.47/  0.02 & \textcolor{red}{\textbf{  0.43}}/  0.02 &   0.47/  0.02 &   0.45/  0.03 \\
 2-arcene & \textcolor{red}{\textbf{  0.54}}/  0.02 & \textcolor{blue}{\textbf{  0.55}}/  0.02 & \textcolor{blue}{\textbf{  0.55}}/  0.02 & \textcolor{red}{\textbf{  0.54}}/  0.02 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.54}}/  0.02 & \textcolor{red}{\textbf{  0.54}}/  0.02 & \textcolor{red}{\textbf{  0.54}}/  0.02 & \textcolor{red}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.01}} \\
 3-artificial charact... &   0.18/  0.01 & \textcolor{red}{\textbf{  0.11}}/\textcolor{black}{\textbf{  0.00}} &   0.12/  0.01 &   0.12/  0.01 &   0.18/\textcolor{black}{\textbf{  0.00}} &   0.18/  0.01 & \textcolor{blue}{\textbf{  0.19}}/  0.01 &   0.17/\textcolor{black}{\textbf{  0.00}} &   0.17/  0.01 &   0.18/  0.01 &   0.17/  0.01 \\
 4-autoUniv au1 1000 & \textcolor{black}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.52}}/  0.02 & \textcolor{black}{\textbf{  0.52}}/  0.02 & \underline{\textcolor{blue}{\textbf{  0.53}}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.01}} \\
@@ -70,13 +76,17 @@
 29-ionosphere & \textcolor{blue}{\textbf{  0.69}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.64}}/  0.03 & \textcolor{red}{\textbf{  0.64}}/  0.03 &   0.66/  0.03 & \textcolor{blue}{\textbf{  0.69}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.69}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.69}}/\textcolor{black}{\textbf{  0.02}} &   0.68/\textcolor{black}{\textbf{  0.02}} &   0.66/\textcolor{black}{\textbf{  0.02}} &   0.66/\textcolor{black}{\textbf{  0.02}} &   0.66/\textcolor{black}{\textbf{  0.02}} \\
 30-iris &   0.66/  0.04 &   0.63/\textcolor{black}{\textbf{  0.03}} &   0.65/  0.04 &   0.67/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.68}}/  0.04 & \textcolor{blue}{\textbf{  0.68}}/  0.04 & \textcolor{blue}{\textbf{  0.68}}/  0.04 &   0.63/  0.04 & \textcolor{red}{\textbf{  0.61}}/  0.04 &   0.65/  0.04 &   0.65/\textcolor{black}{\textbf{  0.03}} \\
 31-kr vs kp &   0.66/  0.02 & \textcolor{blue}{\textbf{  0.69}}/  0.02 &   0.68/  0.02 & \textcolor{blue}{\textbf{  0.69}}/  0.02 &   0.66/\textcolor{black}{\textbf{  0.01}} &   0.66/\textcolor{black}{\textbf{  0.01}} &   0.66/\textcolor{black}{\textbf{  0.01}} &   0.65/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.62}}/\textcolor{black}{\textbf{  0.01}} &   0.66/  0.02 &   0.64/  0.02 \\
-32-leaf &   0.18/  0.01 & \textcolor{red}{\textbf{  0.14}}/  0.01 & \textcolor{red}{\textbf{  0.14}}/  0.01 & \textcolor{red}{\textbf{  0.14}}/  0.01 & \textcolor{black}{\textbf{  0.19}}/  0.01 & \textcolor{black}{\textbf{  0.19}}/  0.01 &   0.18/  0.01 &   0.18/  0.01 &   0.17/  0.01 & \underline{\textcolor{blue}{\textbf{  0.20}}}/  0.01 & \textcolor{black}{\textbf{  0.19}}/  0.01 \\\end{tabular}}\label{strats0bCIELM}
+32-leaf &   0.18/  0.01 & \textcolor{red}{\textbf{  0.14}}/  0.01 & \textcolor{red}{\textbf{  0.14}}/  0.01 & \textcolor{red}{\textbf{  0.14}}/  0.01 & \textcolor{black}{\textbf{  0.19}}/  0.01 & \textcolor{black}{\textbf{  0.19}}/  0.01 &   0.18/  0.01 &   0.18/  0.01 &   0.17/  0.01 & \underline{\textcolor{blue}{\textbf{  0.20}}}/  0.01 & \textcolor{black}{\textbf{  0.19}}/  0.01 \\\end{tabular}
+}\label{strats0bCIELM}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador CIELM. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 33-leukemia haslinger &   0.60/\textcolor{black}{\textbf{  0.02}} &   0.60/  0.03 &   0.60/  0.03 & \textcolor{red}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.02}} &   0.60/  0.03 &   0.60/  0.03 & \textcolor{red}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.02}} &   0.60/  0.03 & \textcolor{red}{\textbf{  0.59}}/  0.03 & \textcolor{red}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.02}} &   0.60/  0.03 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\
+ \hline 
+33-leukemia haslinger &   0.60/\textcolor{black}{\textbf{  0.02}} &   0.60/  0.03 &   0.60/  0.03 & \textcolor{red}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.02}} &   0.60/  0.03 &   0.60/  0.03 & \textcolor{red}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.02}} &   0.60/  0.03 & \textcolor{red}{\textbf{  0.59}}/  0.03 & \textcolor{red}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.02}} &   0.60/  0.03 \\
 34-mammographic mass &   0.69/  0.03 &   0.69/\textcolor{black}{\textbf{  0.02}} &   0.70/  0.03 &   0.70/  0.03 &   0.69/  0.03 &   0.70/  0.03 &   0.70/  0.03 &   0.69/  0.03 &   0.72/  0.03 &   0.67/  0.03 & \textcolor{black}{\textbf{  0.74}}/\textcolor{black}{\textbf{  0.02}} \\
 35-mfeat fourier &   0.17/\textcolor{black}{\textbf{  0.01}} &   0.15/\textcolor{black}{\textbf{  0.01}} &   0.18/\textcolor{black}{\textbf{  0.01}} &   0.18/\textcolor{black}{\textbf{  0.01}} &   0.18/\textcolor{black}{\textbf{  0.01}} &   0.18/\textcolor{black}{\textbf{  0.01}} &   0.18/\textcolor{black}{\textbf{  0.01}} &   0.18/\textcolor{black}{\textbf{  0.01}} &   0.18/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.14}}/\textcolor{darkgreen}{\textbf{  0.00}} &   0.20/\textcolor{black}{\textbf{  0.01}} \\
 36-molecular promotor... &   0.53/\textcolor{darkgreen}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.52}}/  0.03 &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} \\
@@ -107,13 +117,17 @@
 61-spect heart &   0.54/  0.02 &   0.54/  0.02 & \textcolor{blue}{\textbf{  0.55}}/  0.02 &   0.54/  0.02 & \textcolor{blue}{\textbf{  0.55}}/  0.02 & \textcolor{blue}{\textbf{  0.55}}/  0.02 &   0.54/  0.02 & \textcolor{blue}{\textbf{  0.55}}/  0.02 &   0.54/  0.02 & \textcolor{blue}{\textbf{  0.55}}/  0.02 & \textcolor{blue}{\textbf{  0.55}}/  0.02 \\
 62-spectf heart & \textcolor{black}{\textbf{  0.53}}/  0.02 & \textcolor{red}{\textbf{  0.52}}/  0.02 & \textcolor{black}{\textbf{  0.53}}/  0.02 & \textcolor{black}{\textbf{  0.53}}/  0.02 & \textcolor{black}{\textbf{  0.53}}/  0.02 & \textcolor{black}{\textbf{  0.53}}/  0.02 & \textcolor{black}{\textbf{  0.53}}/  0.02 & \textcolor{black}{\textbf{  0.53}}/  0.02 & \textcolor{black}{\textbf{  0.53}}/  0.02 & \textcolor{black}{\textbf{  0.53}}/  0.02 & \textcolor{black}{\textbf{  0.53}}/  0.02 \\
 63-statlog australian... &   0.70/  0.03 &   0.70/  0.03 &   0.72/  0.03 &   0.73/  0.03 &   0.73/  0.03 &   0.72/  0.03 &   0.73/  0.03 &   0.73/  0.03 &   0.71/  0.03 &   0.71/\textcolor{black}{\textbf{  0.02}} &   0.73/\textcolor{black}{\textbf{  0.02}} \\
-64-statlog german cre... &   0.54/\textcolor{black}{\textbf{  0.01}} &   0.54/  0.02 &   0.54/\textcolor{black}{\textbf{  0.01}} &   0.54/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} &   0.54/\textcolor{black}{\textbf{  0.01}} &   0.54/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} &   0.54/\textcolor{black}{\textbf{  0.01}} &   0.54/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} \\\end{tabular}}\label{strats1aCIELM}
+64-statlog german cre... &   0.54/\textcolor{black}{\textbf{  0.01}} &   0.54/  0.02 &   0.54/\textcolor{black}{\textbf{  0.01}} &   0.54/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} &   0.54/\textcolor{black}{\textbf{  0.01}} &   0.54/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} &   0.54/\textcolor{black}{\textbf{  0.01}} &   0.54/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} \\\end{tabular}
+}\label{strats1aCIELM}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador CIELM. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\ \hline 33-leukemia haslinger &   0.60/  0.03 & \textcolor{blue}{\textbf{  0.61}}/  0.03 & \textcolor{blue}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.02}} &   0.60/  0.03 &   0.60/  0.03 & \textcolor{blue}{\textbf{  0.61}}/  0.03 & \textcolor{red}{\textbf{  0.59}}/  0.03 & \textcolor{blue}{\textbf{  0.61}}/  0.03 & \textcolor{red}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.02}} &   0.60/  0.03 &   0.60/  0.03 \\
+ & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\
+ \hline 
+33-leukemia haslinger &   0.60/  0.03 & \textcolor{blue}{\textbf{  0.61}}/  0.03 & \textcolor{blue}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.02}} &   0.60/  0.03 &   0.60/  0.03 & \textcolor{blue}{\textbf{  0.61}}/  0.03 & \textcolor{red}{\textbf{  0.59}}/  0.03 & \textcolor{blue}{\textbf{  0.61}}/  0.03 & \textcolor{red}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.02}} &   0.60/  0.03 &   0.60/  0.03 \\
 34-mammographic mass & \textcolor{black}{\textbf{  0.74}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.74}}/  0.03 & \underline{\textcolor{blue}{\textbf{  0.75}}}/  0.03 & \textcolor{black}{\textbf{  0.74}}/  0.03 &   0.71/  0.03 &   0.73/  0.03 & \textcolor{black}{\textbf{  0.74}}/  0.03 &   0.68/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.58}}/\textcolor{black}{\textbf{  0.02}} &   0.70/  0.03 &   0.71/\textcolor{black}{\textbf{  0.02}} \\
 35-mfeat fourier &   0.18/\textcolor{black}{\textbf{  0.01}} &   0.16/\textcolor{black}{\textbf{  0.01}} &   0.17/\textcolor{black}{\textbf{  0.01}} & \underline{\textcolor{blue}{\textbf{  0.23}}}/\textcolor{black}{\textbf{  0.01}} &   0.18/\textcolor{black}{\textbf{  0.01}} &   0.18/\textcolor{black}{\textbf{  0.01}} &   0.18/\textcolor{black}{\textbf{  0.01}} &   0.17/\textcolor{black}{\textbf{  0.01}} &   0.17/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.22}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.22}}/\textcolor{black}{\textbf{  0.01}} \\
 36-molecular promotor... &   0.53/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.52}}/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/  0.03 \\
@@ -144,13 +158,17 @@
 61-spect heart & \textcolor{blue}{\textbf{  0.55}}/  0.02 & \textcolor{red}{\textbf{  0.53}}/  0.02 & \textcolor{red}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.01}} &   0.54/  0.02 & \textcolor{blue}{\textbf{  0.55}}/  0.02 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} &   0.54/  0.02 &   0.54/  0.02 &   0.54/  0.02 &   0.54/  0.02 \\
 62-spectf heart & \textcolor{black}{\textbf{  0.53}}/  0.02 & \textcolor{red}{\textbf{  0.52}}/  0.02 & \textcolor{red}{\textbf{  0.52}}/  0.02 & \textcolor{red}{\textbf{  0.52}}/  0.02 & \textcolor{black}{\textbf{  0.53}}/  0.02 & \textcolor{black}{\textbf{  0.53}}/  0.02 & \underline{\textcolor{blue}{\textbf{  0.54}}}/  0.02 & \textcolor{black}{\textbf{  0.53}}/  0.02 & \textcolor{black}{\textbf{  0.53}}/  0.02 & \textcolor{black}{\textbf{  0.53}}/  0.02 & \textcolor{black}{\textbf{  0.53}}/  0.02 \\
 63-statlog australian... &   0.73/\textcolor{black}{\textbf{  0.02}} &   0.72/  0.03 &   0.70/  0.03 &   0.72/  0.03 &   0.73/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.74}}/  0.03 & \textcolor{blue}{\textbf{  0.74}}/  0.03 &   0.70/  0.03 & \textcolor{red}{\textbf{  0.64}}/\textcolor{black}{\textbf{  0.02}} &   0.70/  0.03 &   0.71/  0.03 \\
-64-statlog german cre... & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} &   0.54/  0.02 &   0.54/  0.02 & \textcolor{red}{\textbf{  0.53}}/  0.02 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} &   0.54/\textcolor{black}{\textbf{  0.01}} &   0.54/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.01}} \\\end{tabular}}\label{strats1bCIELM}
+64-statlog german cre... & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} &   0.54/  0.02 &   0.54/  0.02 & \textcolor{red}{\textbf{  0.53}}/  0.02 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} &   0.54/\textcolor{black}{\textbf{  0.01}} &   0.54/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.01}} \\\end{tabular}
+}\label{strats1bCIELM}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador CIELM. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 65-statlog heart &   0.67/\textcolor{black}{\textbf{  0.02}} &   0.66/\textcolor{black}{\textbf{  0.02}} &   0.68/  0.03 &   0.68/  0.03 &   0.68/  0.03 &   0.68/  0.03 &   0.68/  0.03 &   0.68/  0.03 &   0.67/\textcolor{black}{\textbf{  0.02}} &   0.67/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.69}}/  0.03 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\
+ \hline 
+65-statlog heart &   0.67/\textcolor{black}{\textbf{  0.02}} &   0.66/\textcolor{black}{\textbf{  0.02}} &   0.68/  0.03 &   0.68/  0.03 &   0.68/  0.03 &   0.68/  0.03 &   0.68/  0.03 &   0.68/  0.03 &   0.67/\textcolor{black}{\textbf{  0.02}} &   0.67/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.69}}/  0.03 \\
 66-statlog image segm... &   0.53/  0.02 &   0.49/  0.02 & \textcolor{black}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.01}} &   0.58/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.01}} &   0.58/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.01}} &   0.55/  0.02 &   0.38/  0.02 &   0.48/  0.02 \\
 67-statlog landsat sa... &   0.48/  0.02 &   0.45/  0.02 & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.01}} &   0.53/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.01}} &   0.53/\textcolor{black}{\textbf{  0.01}} &   0.50/  0.02 &   0.32/  0.02 &   0.47/  0.02 \\
 68-statlog vehicle si... &   0.47/\textcolor{black}{\textbf{  0.01}} &   0.47/\textcolor{black}{\textbf{  0.01}} &   0.49/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.01}} &   0.49/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.01}} &   0.48/\textcolor{black}{\textbf{  0.01}} &   0.46/\textcolor{black}{\textbf{  0.01}} &   0.48/  0.02 \\
@@ -179,13 +197,17 @@
 91-wilt &   0.50/\textcolor{black}{\textbf{  0.00}} &   0.50/  0.01 &   0.50/\textcolor{black}{\textbf{  0.00}} &   0.50/\textcolor{black}{\textbf{  0.00}} &   0.50/\textcolor{black}{\textbf{  0.00}} &   0.50/\textcolor{black}{\textbf{  0.00}} &   0.50/\textcolor{black}{\textbf{  0.00}} &   0.50/\textcolor{black}{\textbf{  0.00}} &   0.52/  0.02 & \textcolor{black}{\textbf{  0.71}}/  0.02 &   0.52/  0.04 \\
 92-wine &   0.75/  0.03 &   0.74/  0.03 &   0.81/\textcolor{black}{\textbf{  0.02}} &   0.81/\textcolor{black}{\textbf{  0.02}} &   0.80/\textcolor{black}{\textbf{  0.02}} &   0.81/\textcolor{black}{\textbf{  0.02}} &   0.81/\textcolor{black}{\textbf{  0.02}} &   0.80/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} &   0.77/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.82}}/\textcolor{black}{\textbf{  0.02}} \\ \hline
 93-wine quality white... &   0.22/\textcolor{black}{\textbf{  0.00}} &   0.22/\textcolor{black}{\textbf{  0.00}} &   0.22/\textcolor{black}{\textbf{  0.00}} &   0.22/\textcolor{black}{\textbf{  0.00}} & \textcolor{blue}{\textbf{  0.23}}/\textcolor{black}{\textbf{  0.00}} &   0.22/\textcolor{black}{\textbf{  0.00}} &   0.22/\textcolor{black}{\textbf{  0.00}} & \textcolor{blue}{\textbf{  0.23}}/\textcolor{black}{\textbf{  0.00}} &   0.22/\textcolor{black}{\textbf{  0.00}} &   0.22/\textcolor{black}{\textbf{  0.00}} &   0.22/  0.01 \\
-94-yeast 4class &   0.35/\textcolor{black}{\textbf{  0.01}} &   0.35/\textcolor{black}{\textbf{  0.01}} &   0.36/  0.02 &   0.36/\textcolor{black}{\textbf{  0.01}} &   0.36/\textcolor{black}{\textbf{  0.01}} &   0.36/  0.02 &   0.36/\textcolor{black}{\textbf{  0.01}} &   0.36/\textcolor{black}{\textbf{  0.01}} &   0.35/\textcolor{black}{\textbf{  0.01}} &   0.35/  0.02 & \textcolor{black}{\textbf{  0.37}}/  0.02 \\\end{tabular}}\label{strats2aCIELM}
+94-yeast 4class &   0.35/\textcolor{black}{\textbf{  0.01}} &   0.35/\textcolor{black}{\textbf{  0.01}} &   0.36/  0.02 &   0.36/\textcolor{black}{\textbf{  0.01}} &   0.36/\textcolor{black}{\textbf{  0.01}} &   0.36/  0.02 &   0.36/\textcolor{black}{\textbf{  0.01}} &   0.36/\textcolor{black}{\textbf{  0.01}} &   0.35/\textcolor{black}{\textbf{  0.01}} &   0.35/  0.02 & \textcolor{black}{\textbf{  0.37}}/  0.02 \\\end{tabular}
+}\label{strats2aCIELM}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador CIELM. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\ \hline 65-statlog heart & \textcolor{blue}{\textbf{  0.69}}/  0.03 &   0.67/\textcolor{black}{\textbf{  0.02}} &   0.67/  0.03 &   0.68/  0.03 & \textcolor{blue}{\textbf{  0.69}}/  0.03 & \textcolor{blue}{\textbf{  0.69}}/  0.03 & \textcolor{blue}{\textbf{  0.69}}/  0.03 &   0.65/  0.03 & \textcolor{red}{\textbf{  0.63}}/\textcolor{black}{\textbf{  0.02}} &   0.67/  0.03 &   0.66/\textcolor{black}{\textbf{  0.02}} \\
+ & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\
+ \hline 
+65-statlog heart & \textcolor{blue}{\textbf{  0.69}}/  0.03 &   0.67/\textcolor{black}{\textbf{  0.02}} &   0.67/  0.03 &   0.68/  0.03 & \textcolor{blue}{\textbf{  0.69}}/  0.03 & \textcolor{blue}{\textbf{  0.69}}/  0.03 & \textcolor{blue}{\textbf{  0.69}}/  0.03 &   0.65/  0.03 & \textcolor{red}{\textbf{  0.63}}/\textcolor{black}{\textbf{  0.02}} &   0.67/  0.03 &   0.66/\textcolor{black}{\textbf{  0.02}} \\
 66-statlog image segm... &   0.57/  0.02 & \textcolor{red}{\textbf{  0.29}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.29}}/\textcolor{black}{\textbf{  0.01}} &   0.32/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.01}} & \underline{\textcolor{blue}{\textbf{  0.60}}}/\textcolor{black}{\textbf{  0.01}} &   0.52/  0.02 &   0.38/  0.02 &   0.53/  0.02 &   0.53/  0.02 \\
 67-statlog landsat sa... &   0.53/  0.02 &   0.32/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.30}}/  0.02 &   0.35/\textcolor{black}{\textbf{  0.01}} & \underline{\textcolor{blue}{\textbf{  0.55}}}/  0.02 & \textcolor{black}{\textbf{  0.54}}/  0.02 & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.01}} &   0.50/  0.02 &   0.36/  0.03 &   0.53/  0.03 &   0.52/  0.03 \\
 68-statlog vehicle si... &   0.49/\textcolor{black}{\textbf{  0.01}} &   0.46/  0.02 &   0.48/  0.02 &   0.48/  0.02 &   0.49/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.01}} &   0.46/  0.02 & \textcolor{red}{\textbf{  0.41}}/  0.02 &   0.46/  0.02 &   0.46/  0.02 \\
@@ -214,6 +236,8 @@
 91-wilt &   0.52/  0.04 & \underline{\textcolor{blue}{\textbf{  0.72}}}/  0.02 & \textcolor{black}{\textbf{  0.71}}/  0.02 & \textcolor{red}{\textbf{  0.49}}/  0.01 &   0.66/  0.03 &   0.64/  0.02 &   0.50/\textcolor{black}{\textbf{  0.00}} &   0.51/  0.02 &   0.51/  0.02 &   0.68/  0.05 & \textcolor{black}{\textbf{  0.71}}/  0.03 \\
 92-wine &   0.81/\textcolor{black}{\textbf{  0.02}} &   0.80/\textcolor{black}{\textbf{  0.02}} &   0.80/\textcolor{black}{\textbf{  0.02}} &   0.78/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.82}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.82}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.82}}/\textcolor{black}{\textbf{  0.02}} &   0.67/  0.03 & \textcolor{red}{\textbf{  0.64}}/  0.03 &   0.80/\textcolor{black}{\textbf{  0.02}} &   0.79/\textcolor{black}{\textbf{  0.02}} \\ \hline
 93-wine quality white... &   0.22/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.21}}/  0.01 & \textcolor{red}{\textbf{  0.21}}/\textcolor{black}{\textbf{  0.00}} &   0.22/\textcolor{black}{\textbf{  0.00}} & \textcolor{blue}{\textbf{  0.23}}/  0.01 &   0.22/\textcolor{black}{\textbf{  0.00}} & \textcolor{blue}{\textbf{  0.23}}/\textcolor{black}{\textbf{  0.00}} &   0.22/\textcolor{black}{\textbf{  0.00}} &   0.22/\textcolor{black}{\textbf{  0.00}} & \textcolor{blue}{\textbf{  0.23}}/  0.01 &   0.22/  0.01 \\
-94-yeast 4class & \textcolor{black}{\textbf{  0.37}}/  0.02 & \textcolor{red}{\textbf{  0.29}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.29}}/\textcolor{black}{\textbf{  0.01}} &   0.30/\textcolor{black}{\textbf{  0.01}} &   0.36/\textcolor{black}{\textbf{  0.01}} &   0.36/\textcolor{black}{\textbf{  0.01}} &   0.36/  0.02 &   0.35/  0.02 &   0.33/\textcolor{black}{\textbf{  0.01}} & \underline{\textcolor{blue}{\textbf{  0.38}}}/  0.02 &   0.36/  0.02 \\\end{tabular}}\label{strats2bCIELM}
+94-yeast 4class & \textcolor{black}{\textbf{  0.37}}/  0.02 & \textcolor{red}{\textbf{  0.29}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.29}}/\textcolor{black}{\textbf{  0.01}} &   0.30/\textcolor{black}{\textbf{  0.01}} &   0.36/\textcolor{black}{\textbf{  0.01}} &   0.36/\textcolor{black}{\textbf{  0.01}} &   0.36/  0.02 &   0.35/  0.02 &   0.33/\textcolor{black}{\textbf{  0.01}} & \underline{\textcolor{blue}{\textbf{  0.38}}}/  0.02 &   0.36/  0.02 \\\end{tabular}
+}\label{strats2bCIELM}
 \end{center}
 \end{table}
+                                     
