--- a/stratstabNB.tex
+++ b/stratstabNB.tex
@@ -2,7 +2,9 @@
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador NB. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 1-abalone 3class &   0.54/  0.02 &   0.54/  0.02 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/  0.02 &   0.54/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/  0.02 & \textcolor{blue}{\textbf{  0.55}}/  0.02 & \textcolor{red}{\textbf{  0.43}}/  0.05 &   0.52/  0.04 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\
+ \hline 
+1-abalone 3class &   0.54/  0.02 &   0.54/  0.02 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/  0.02 &   0.54/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/  0.02 & \textcolor{blue}{\textbf{  0.55}}/  0.02 & \textcolor{red}{\textbf{  0.43}}/  0.05 &   0.52/  0.04 \\
 2-arcene &   0.67/  0.05 &   0.68/  0.05 &   0.68/  0.05 &   0.67/  0.05 & \textcolor{red}{\textbf{  0.66}}/  0.05 &   0.70/  0.05 &   0.70/  0.05 & \textcolor{blue}{\textbf{  0.71}}/  0.05 &   0.69/  0.05 &   0.69/  0.05 &   0.70/  0.06 \\
 3-artificial charact... &   0.13/  0.02 &   0.13/  0.02 &   0.13/\textcolor{black}{\textbf{  0.01}} &   0.13/\textcolor{black}{\textbf{  0.01}} &   0.13/\textcolor{black}{\textbf{  0.01}} &   0.13/\textcolor{black}{\textbf{  0.01}} &   0.12/\textcolor{black}{\textbf{  0.01}} &   0.13/\textcolor{black}{\textbf{  0.01}} &   0.13/  0.02 & \textcolor{red}{\textbf{  0.11}}/\textcolor{black}{\textbf{  0.01}} &   0.13/  0.02 \\
 4-autoUniv au1 1000 & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} \\
@@ -33,13 +35,17 @@
 29-ionosphere &   0.84/\textcolor{black}{\textbf{  0.03}} &   0.84/  0.04 &   0.86/  0.04 &   0.85/  0.04 &   0.85/  0.04 & \textcolor{blue}{\textbf{  0.87}}/  0.04 & \textcolor{blue}{\textbf{  0.87}}/  0.04 & \textcolor{blue}{\textbf{  0.87}}/  0.04 &   0.85/  0.04 &   0.85/  0.04 &   0.86/  0.04 \\
 30-iris &   0.92/  0.03 &   0.92/  0.03 & \textcolor{blue}{\textbf{  0.93}}/  0.03 & \textcolor{blue}{\textbf{  0.93}}/  0.03 & \textcolor{blue}{\textbf{  0.93}}/  0.03 & \textcolor{blue}{\textbf{  0.93}}/  0.03 & \textcolor{blue}{\textbf{  0.93}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.93}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.93}}/  0.03 & \textcolor{blue}{\textbf{  0.93}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.93}}/\textcolor{black}{\textbf{  0.02}} \\
 31-kr vs kp &   0.76/  0.03 &   0.77/  0.03 &   0.81/\textcolor{black}{\textbf{  0.01}} &   0.80/  0.02 &   0.80/  0.02 & \textcolor{blue}{\textbf{  0.88}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.88}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.88}}/\textcolor{black}{\textbf{  0.01}} &   0.87/  0.02 &   0.75/  0.02 &   0.87/  0.02 \\
-32-leaf &   0.47/  0.03 &   0.47/  0.03 &   0.49/  0.03 &   0.49/  0.03 & \textcolor{blue}{\textbf{  0.50}}/  0.03 &   0.49/  0.03 & \textcolor{blue}{\textbf{  0.50}}/  0.03 &   0.49/\textcolor{black}{\textbf{  0.02}} &   0.47/  0.03 &   0.45/\textcolor{black}{\textbf{  0.02}} &   0.46/  0.03 \\\end{tabular}}\label{strats0aNB}
+32-leaf &   0.47/  0.03 &   0.47/  0.03 &   0.49/  0.03 &   0.49/  0.03 & \textcolor{blue}{\textbf{  0.50}}/  0.03 &   0.49/  0.03 & \textcolor{blue}{\textbf{  0.50}}/  0.03 &   0.49/\textcolor{black}{\textbf{  0.02}} &   0.47/  0.03 &   0.45/\textcolor{black}{\textbf{  0.02}} &   0.46/  0.03 \\\end{tabular}
+}\label{strats0aNB}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador NB. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\ \hline 1-abalone 3class &   0.53/  0.03 &   0.50/  0.03 &   0.50/  0.03 &   0.51/  0.02 & \textcolor{blue}{\textbf{  0.55}}/  0.02 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/  0.02 &   0.54/  0.02 &   0.54/  0.02 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} &   0.53/  0.03 \\
+ & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\
+ \hline 
+1-abalone 3class &   0.53/  0.03 &   0.50/  0.03 &   0.50/  0.03 &   0.51/  0.02 & \textcolor{blue}{\textbf{  0.55}}/  0.02 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.55}}/  0.02 &   0.54/  0.02 &   0.54/  0.02 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.01}} &   0.53/  0.03 \\
 2-arcene & \textcolor{blue}{\textbf{  0.71}}/  0.05 &   0.69/\textcolor{black}{\textbf{  0.04}} &   0.69/\textcolor{black}{\textbf{  0.04}} &   0.70/  0.05 &   0.69/  0.05 &   0.69/  0.05 & \textcolor{blue}{\textbf{  0.71}}/  0.05 &   0.68/  0.05 &   0.67/  0.05 &   0.67/  0.05 & \textcolor{red}{\textbf{  0.66}}/  0.05 \\
 3-artificial charact... &   0.13/  0.02 & \textcolor{red}{\textbf{  0.11}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.11}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.11}}/\textcolor{black}{\textbf{  0.01}} &   0.13/\textcolor{black}{\textbf{  0.01}} &   0.12/\textcolor{black}{\textbf{  0.01}} &   0.13/\textcolor{black}{\textbf{  0.01}} &   0.13/  0.02 &   0.13/  0.02 & \underline{\textcolor{blue}{\textbf{  0.20}}}/  0.02 & \textcolor{black}{\textbf{  0.19}}/  0.03 \\
 4-autoUniv au1 1000 & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{blue}{\textbf{  0.53}}/  0.02 & \textcolor{blue}{\textbf{  0.53}}/  0.02 &   0.51/  0.01 & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/  0.01 & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} &   0.51/  0.01 &   0.51/  0.02 \\
@@ -70,13 +76,17 @@
 29-ionosphere &   0.86/\textcolor{black}{\textbf{  0.03}} &   0.84/  0.05 &   0.85/  0.04 & \textcolor{red}{\textbf{  0.81}}/  0.07 & \textcolor{blue}{\textbf{  0.87}}/  0.04 & \textcolor{blue}{\textbf{  0.87}}/  0.04 & \textcolor{blue}{\textbf{  0.87}}/  0.04 &   0.84/  0.04 &   0.85/\textcolor{black}{\textbf{  0.03}} &   0.84/  0.04 &   0.83/\textcolor{black}{\textbf{  0.03}} \\
 30-iris & \textcolor{blue}{\textbf{  0.93}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.85}}/  0.04 &   0.87/  0.04 &   0.90/  0.03 & \textcolor{blue}{\textbf{  0.93}}/  0.03 & \textcolor{blue}{\textbf{  0.93}}/  0.03 & \textcolor{blue}{\textbf{  0.93}}/  0.03 & \textcolor{blue}{\textbf{  0.93}}/  0.03 & \textcolor{blue}{\textbf{  0.93}}/  0.03 & \textcolor{blue}{\textbf{  0.93}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.93}}/\textcolor{black}{\textbf{  0.02}} \\
 31-kr vs kp & \textcolor{blue}{\textbf{  0.88}}/\textcolor{black}{\textbf{  0.01}} &   0.83/  0.02 &   0.82/  0.02 &   0.83/  0.02 & \textcolor{blue}{\textbf{  0.88}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.88}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.88}}/\textcolor{black}{\textbf{  0.01}} &   0.78/  0.03 &   0.73/  0.03 & \textcolor{red}{\textbf{  0.65}}/  0.05 & \textcolor{red}{\textbf{  0.65}}/  0.04 \\
-32-leaf &   0.48/  0.03 &   0.39/  0.03 & \textcolor{red}{\textbf{  0.38}}/  0.03 &   0.40/\textcolor{black}{\textbf{  0.02}} &   0.49/  0.03 & \textcolor{blue}{\textbf{  0.50}}/  0.03 &   0.49/  0.03 &   0.48/  0.04 &   0.48/  0.04 &   0.48/\textcolor{black}{\textbf{  0.02}} &   0.47/  0.04 \\\end{tabular}}\label{strats0bNB}
+32-leaf &   0.48/  0.03 &   0.39/  0.03 & \textcolor{red}{\textbf{  0.38}}/  0.03 &   0.40/\textcolor{black}{\textbf{  0.02}} &   0.49/  0.03 & \textcolor{blue}{\textbf{  0.50}}/  0.03 &   0.49/  0.03 &   0.48/  0.04 &   0.48/  0.04 &   0.48/\textcolor{black}{\textbf{  0.02}} &   0.47/  0.04 \\\end{tabular}
+}\label{strats0bNB}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador NB. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 33-leukemia haslinger & \textcolor{blue}{\textbf{  0.82}}/  0.07 & \textcolor{blue}{\textbf{  0.82}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.82}}/  0.07 & \textcolor{blue}{\textbf{  0.82}}/  0.07 & \textcolor{blue}{\textbf{  0.82}}/  0.07 &   0.81/\textcolor{black}{\textbf{  0.06}} &   0.80/  0.07 & \textcolor{red}{\textbf{  0.79}}/\textcolor{black}{\textbf{  0.06}} &   0.81/\textcolor{black}{\textbf{  0.06}} &   0.81/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.79}}/  0.07 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\
+ \hline 
+33-leukemia haslinger & \textcolor{blue}{\textbf{  0.82}}/  0.07 & \textcolor{blue}{\textbf{  0.82}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.82}}/  0.07 & \textcolor{blue}{\textbf{  0.82}}/  0.07 & \textcolor{blue}{\textbf{  0.82}}/  0.07 &   0.81/\textcolor{black}{\textbf{  0.06}} &   0.80/  0.07 & \textcolor{red}{\textbf{  0.79}}/\textcolor{black}{\textbf{  0.06}} &   0.81/\textcolor{black}{\textbf{  0.06}} &   0.81/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.79}}/  0.07 \\
 34-mammographic mass &   0.78/  0.03 & \textcolor{black}{\textbf{  0.79}}/  0.03 & \textcolor{black}{\textbf{  0.79}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.79}}/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.80}}}/\textcolor{black}{\textbf{  0.02}} &   0.78/\textcolor{black}{\textbf{  0.02}} &   0.78/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.79}}/  0.03 &   0.78/  0.03 & \textcolor{red}{\textbf{  0.73}}/  0.05 &   0.78/  0.03 \\
 35-mfeat fourier &   0.63/\textcolor{darkgreen}{\textbf{  0.01}} &   0.63/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.67}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.67}}/\textcolor{black}{\textbf{  0.02}} &   0.66/\textcolor{black}{\textbf{  0.02}} &   0.62/\textcolor{black}{\textbf{  0.02}} &   0.64/\textcolor{black}{\textbf{  0.02}} &   0.62/\textcolor{black}{\textbf{  0.02}} &   0.64/\textcolor{black}{\textbf{  0.02}} &   0.60/  0.03 &   0.53/  0.03 \\
 36-molecular promotor... &   0.84/\textcolor{black}{\textbf{  0.04}} &   0.83/\textcolor{darkgreen}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.04}} &   0.84/\textcolor{black}{\textbf{  0.04}} &   0.84/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.04}} &   0.84/\textcolor{black}{\textbf{  0.04}} \\
@@ -107,13 +117,17 @@
 61-spect heart &   0.67/  0.06 &   0.66/  0.06 &   0.67/  0.06 &   0.66/  0.06 &   0.67/  0.06 &   0.67/\textcolor{black}{\textbf{  0.04}} &   0.66/  0.06 &   0.67/  0.05 &   0.67/  0.05 &   0.67/  0.06 & \textcolor{blue}{\textbf{  0.68}}/  0.05 \\
 62-spectf heart &   0.67/  0.05 &   0.68/  0.06 & \textcolor{black}{\textbf{  0.69}}/  0.06 & \underline{\textcolor{blue}{\textbf{  0.70}}}/  0.07 & \textcolor{black}{\textbf{  0.69}}/  0.05 &   0.66/  0.06 &   0.66/  0.05 &   0.64/  0.06 &   0.67/  0.05 &   0.60/  0.04 &   0.64/  0.05 \\
 63-statlog australian... &   0.81/  0.03 &   0.82/  0.03 &   0.82/\textcolor{black}{\textbf{  0.02}} &   0.82/\textcolor{black}{\textbf{  0.02}} &   0.82/\textcolor{black}{\textbf{  0.02}} &   0.83/\textcolor{black}{\textbf{  0.02}} &   0.84/\textcolor{black}{\textbf{  0.02}} &   0.84/\textcolor{black}{\textbf{  0.02}} &   0.82/  0.03 &   0.84/\textcolor{black}{\textbf{  0.02}} &   0.82/  0.04 \\
-64-statlog german cre... & \textcolor{blue}{\textbf{  0.53}}/  0.03 & \textcolor{blue}{\textbf{  0.53}}/  0.04 &   0.52/  0.03 &   0.52/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.53}}/  0.03 &   0.52/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.53}}/  0.03 &   0.52/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.53}}/  0.03 &   0.52/  0.03 & \textcolor{blue}{\textbf{  0.53}}/  0.03 \\\end{tabular}}\label{strats1aNB}
+64-statlog german cre... & \textcolor{blue}{\textbf{  0.53}}/  0.03 & \textcolor{blue}{\textbf{  0.53}}/  0.04 &   0.52/  0.03 &   0.52/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.53}}/  0.03 &   0.52/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.53}}/  0.03 &   0.52/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.53}}/  0.03 &   0.52/  0.03 & \textcolor{blue}{\textbf{  0.53}}/  0.03 \\\end{tabular}
+}\label{strats1aNB}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador NB. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\ \hline 33-leukemia haslinger &   0.80/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.79}}/  0.07 & \textcolor{red}{\textbf{  0.79}}/\textcolor{black}{\textbf{  0.06}} &   0.80/\textcolor{black}{\textbf{  0.06}} &   0.81/\textcolor{black}{\textbf{  0.06}} &   0.80/  0.07 & \textcolor{red}{\textbf{  0.79}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.82}}/  0.08 & \textcolor{blue}{\textbf{  0.82}}/  0.07 & \textcolor{blue}{\textbf{  0.82}}/  0.07 & \textcolor{blue}{\textbf{  0.82}}/\textcolor{black}{\textbf{  0.06}} \\
+ & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\
+ \hline 
+33-leukemia haslinger &   0.80/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.79}}/  0.07 & \textcolor{red}{\textbf{  0.79}}/\textcolor{black}{\textbf{  0.06}} &   0.80/\textcolor{black}{\textbf{  0.06}} &   0.81/\textcolor{black}{\textbf{  0.06}} &   0.80/  0.07 & \textcolor{red}{\textbf{  0.79}}/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.82}}/  0.08 & \textcolor{blue}{\textbf{  0.82}}/  0.07 & \textcolor{blue}{\textbf{  0.82}}/  0.07 & \textcolor{blue}{\textbf{  0.82}}/\textcolor{black}{\textbf{  0.06}} \\
 34-mammographic mass &   0.78/  0.03 &   0.74/  0.03 &   0.75/  0.03 &   0.77/\textcolor{black}{\textbf{  0.02}} &   0.78/\textcolor{black}{\textbf{  0.02}} &   0.78/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.79}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.79}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.79}}/\textcolor{black}{\textbf{  0.02}} &   0.76/  0.06 &   0.75/  0.05 \\
 35-mfeat fourier &   0.58/  0.03 &   0.50/  0.03 &   0.51/  0.03 &   0.58/\textcolor{black}{\textbf{  0.02}} &   0.62/\textcolor{black}{\textbf{  0.02}} &   0.64/\textcolor{black}{\textbf{  0.02}} &   0.62/\textcolor{black}{\textbf{  0.02}} &   0.62/\textcolor{black}{\textbf{  0.02}} &   0.66/\textcolor{black}{\textbf{  0.02}} &   0.53/  0.03 & \textcolor{red}{\textbf{  0.49}}/  0.04 \\
 36-molecular promotor... &   0.84/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.85}}/  0.05 & \textcolor{blue}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.04}} &   0.84/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.85}}/  0.05 &   0.83/  0.05 &   0.83/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.82}}/\textcolor{black}{\textbf{  0.04}} \\
@@ -144,13 +158,17 @@
 61-spect heart & \textcolor{blue}{\textbf{  0.68}}/  0.05 &   0.67/\textcolor{black}{\textbf{  0.04}} &   0.67/  0.05 &   0.67/  0.05 & \textcolor{blue}{\textbf{  0.68}}/  0.05 & \textcolor{blue}{\textbf{  0.68}}/  0.05 &   0.67/  0.05 &   0.67/  0.06 & \textcolor{red}{\textbf{  0.65}}/  0.07 & \textcolor{red}{\textbf{  0.65}}/  0.06 & \textcolor{red}{\textbf{  0.65}}/  0.07 \\
 62-spectf heart &   0.63/  0.05 &   0.62/  0.04 &   0.61/\textcolor{black}{\textbf{  0.03}} &   0.60/\textcolor{black}{\textbf{  0.03}} &   0.64/  0.05 &   0.64/  0.05 &   0.65/  0.06 &   0.68/  0.05 &   0.66/  0.05 &   0.62/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.59}}/\textcolor{black}{\textbf{  0.03}} \\
 63-statlog australian... &   0.82/  0.03 &   0.84/  0.03 & \textcolor{blue}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.02}} &   0.84/\textcolor{black}{\textbf{  0.02}} &   0.84/  0.05 & \textcolor{blue}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.02}} &   0.84/\textcolor{black}{\textbf{  0.02}} &   0.81/  0.04 &   0.81/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.80}}/  0.03 &   0.81/  0.03 \\
-64-statlog german cre... & \textcolor{blue}{\textbf{  0.53}}/  0.03 & \textcolor{red}{\textbf{  0.51}}/\textcolor{darkgreen}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.02}} &   0.52/\textcolor{black}{\textbf{  0.02}} &   0.52/\textcolor{black}{\textbf{  0.02}} &   0.52/\textcolor{black}{\textbf{  0.02}} &   0.52/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.53}}/  0.03 &   0.52/  0.03 & \textcolor{blue}{\textbf{  0.53}}/  0.03 \\\end{tabular}}\label{strats1bNB}
+64-statlog german cre... & \textcolor{blue}{\textbf{  0.53}}/  0.03 & \textcolor{red}{\textbf{  0.51}}/\textcolor{darkgreen}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.02}} &   0.52/\textcolor{black}{\textbf{  0.02}} &   0.52/\textcolor{black}{\textbf{  0.02}} &   0.52/\textcolor{black}{\textbf{  0.02}} &   0.52/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.53}}/  0.03 &   0.52/  0.03 & \textcolor{blue}{\textbf{  0.53}}/  0.03 \\\end{tabular}
+}\label{strats1bNB}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador NB. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 65-statlog heart &   0.77/  0.04 &   0.76/  0.04 &   0.77/  0.04 &   0.77/  0.04 &   0.77/  0.04 &   0.76/\textcolor{black}{\textbf{  0.03}} &   0.77/\textcolor{black}{\textbf{  0.03}} &   0.76/\textcolor{black}{\textbf{  0.03}} &   0.77/  0.04 & \textcolor{red}{\textbf{  0.69}}/\textcolor{black}{\textbf{  0.03}} &   0.76/  0.04 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\
+ \hline 
+65-statlog heart &   0.77/  0.04 &   0.76/  0.04 &   0.77/  0.04 &   0.77/  0.04 &   0.77/  0.04 &   0.76/\textcolor{black}{\textbf{  0.03}} &   0.77/\textcolor{black}{\textbf{  0.03}} &   0.76/\textcolor{black}{\textbf{  0.03}} &   0.77/  0.04 & \textcolor{red}{\textbf{  0.69}}/\textcolor{black}{\textbf{  0.03}} &   0.76/  0.04 \\
 66-statlog image segm... &   0.78/  0.02 &   0.80/  0.02 &   0.81/\textcolor{black}{\textbf{  0.01}} &   0.82/\textcolor{black}{\textbf{  0.01}} &   0.81/  0.02 &   0.84/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.85}}/  0.02 & \textcolor{blue}{\textbf{  0.85}}/  0.02 &   0.83/  0.02 &   0.81/  0.02 &   0.79/  0.02 \\
 67-statlog landsat sa... &   0.74/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.02}} &   0.75/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} &   0.75/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.62}}/  0.04 &   0.66/  0.03 \\
 68-statlog vehicle si... &   0.47/\textcolor{black}{\textbf{  0.02}} &   0.45/\textcolor{black}{\textbf{  0.02}} &   0.47/  0.03 &   0.46/  0.03 &   0.47/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.49}}/  0.04 &   0.48/\textcolor{black}{\textbf{  0.02}} &   0.48/  0.03 &   0.47/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.44}}/  0.05 & \underline{\textcolor{blue}{\textbf{  0.50}}}/  0.04 \\
@@ -179,13 +197,17 @@
 91-wilt &   0.51/  0.01 & \textcolor{red}{\textbf{  0.50}}/  0.01 & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/  0.01 &   0.51/  0.02 & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} &   0.51/  0.01 &   0.66/  0.06 &   0.51/  0.02 \\
 92-wine &   0.95/\textcolor{black}{\textbf{  0.02}} &   0.94/\textcolor{black}{\textbf{  0.02}} &   0.95/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.96}}/\textcolor{black}{\textbf{  0.02}} &   0.95/\textcolor{black}{\textbf{  0.02}} &   0.95/\textcolor{black}{\textbf{  0.02}} &   0.95/\textcolor{black}{\textbf{  0.02}} &   0.95/\textcolor{darkgreen}{\textbf{  0.01}} &   0.95/\textcolor{black}{\textbf{  0.02}} &   0.95/\textcolor{black}{\textbf{  0.02}} &   0.95/\textcolor{black}{\textbf{  0.02}} \\ \hline
 93-wine quality white... &   0.26/  0.03 &   0.25/  0.03 &   0.25/  0.02 &   0.25/  0.02 &   0.25/  0.02 &   0.24/  0.02 &   0.24/  0.02 &   0.24/  0.02 &   0.26/  0.03 &   0.21/\textcolor{black}{\textbf{  0.01}} &   0.24/  0.02 \\
-94-yeast 4class &   0.52/  0.04 & \textcolor{black}{\textbf{  0.53}}/  0.04 & \textcolor{black}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.53}}/  0.04 & \textcolor{black}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.53}}/\textcolor{darkgreen}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.03}} &   0.51/  0.04 &   0.48/\textcolor{black}{\textbf{  0.03}} &   0.51/  0.04 \\\end{tabular}}\label{strats2aNB}
+94-yeast 4class &   0.52/  0.04 & \textcolor{black}{\textbf{  0.53}}/  0.04 & \textcolor{black}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.53}}/  0.04 & \textcolor{black}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.53}}/\textcolor{darkgreen}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.03}} &   0.51/  0.04 &   0.48/\textcolor{black}{\textbf{  0.03}} &   0.51/  0.04 \\\end{tabular}
+}\label{strats2aNB}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador NB. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\ \hline 65-statlog heart &   0.76/  0.04 &   0.76/  0.04 &   0.76/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.79}}/\textcolor{black}{\textbf{  0.03}} &   0.75/\textcolor{black}{\textbf{  0.03}} &   0.76/\textcolor{black}{\textbf{  0.03}} &   0.76/  0.04 &   0.77/  0.04 & \textcolor{blue}{\textbf{  0.79}}/  0.06 &   0.76/  0.04 &   0.75/  0.04 \\
+ & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\
+ \hline 
+65-statlog heart &   0.76/  0.04 &   0.76/  0.04 &   0.76/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.79}}/\textcolor{black}{\textbf{  0.03}} &   0.75/\textcolor{black}{\textbf{  0.03}} &   0.76/\textcolor{black}{\textbf{  0.03}} &   0.76/  0.04 &   0.77/  0.04 & \textcolor{blue}{\textbf{  0.79}}/  0.06 &   0.76/  0.04 &   0.75/  0.04 \\
 66-statlog image segm... &   0.82/  0.02 &   0.68/  0.04 & \textcolor{red}{\textbf{  0.66}}/  0.05 &   0.76/  0.04 &   0.84/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.01}} &   0.79/  0.03 &   0.83/  0.02 &   0.74/  0.03 &   0.73/  0.03 \\
 67-statlog landsat sa... &   0.73/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.62}}/  0.06 &   0.63/  0.06 &   0.74/  0.03 &   0.76/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} &   0.73/  0.03 & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.02}} &   0.71/  0.03 &   0.69/  0.04 \\
 68-statlog vehicle si... &   0.48/  0.04 & \textcolor{black}{\textbf{  0.49}}/\textcolor{black}{\textbf{  0.02}} &   0.48/  0.03 &   0.48/  0.04 & \textcolor{black}{\textbf{  0.49}}/  0.03 & \textcolor{black}{\textbf{  0.49}}/  0.03 &   0.48/  0.04 &   0.46/  0.03 &   0.48/  0.03 &   0.46/  0.03 &   0.45/  0.04 \\
@@ -214,6 +236,8 @@
 91-wilt &   0.51/  0.02 &   0.67/  0.06 & \textcolor{black}{\textbf{  0.68}}/  0.06 & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/  0.01 &   0.51/  0.02 & \textcolor{red}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.00}} & \textcolor{red}{\textbf{  0.50}}/  0.01 &   0.51/  0.03 & \textcolor{black}{\textbf{  0.68}}/  0.07 & \underline{\textcolor{blue}{\textbf{  0.71}}}/  0.05 \\
 92-wine &   0.95/\textcolor{black}{\textbf{  0.02}} &   0.94/\textcolor{black}{\textbf{  0.02}} &   0.94/\textcolor{black}{\textbf{  0.02}} &   0.95/\textcolor{black}{\textbf{  0.02}} &   0.95/\textcolor{black}{\textbf{  0.02}} &   0.95/\textcolor{black}{\textbf{  0.02}} &   0.95/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.93}}/  0.03 & \textcolor{blue}{\textbf{  0.96}}/\textcolor{black}{\textbf{  0.02}} &   0.94/\textcolor{black}{\textbf{  0.02}} &   0.95/\textcolor{black}{\textbf{  0.02}} \\ \hline
 93-wine quality white... &   0.25/  0.02 & \textcolor{red}{\textbf{  0.20}}/\textcolor{black}{\textbf{  0.01}} &   0.21/\textcolor{black}{\textbf{  0.01}} &   0.22/  0.02 &   0.24/  0.02 &   0.23/  0.02 &   0.25/  0.02 &   0.25/  0.02 &   0.26/  0.03 & \textcolor{blue}{\textbf{  0.28}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.28}}/  0.02 \\
-94-yeast 4class &   0.52/  0.04 &   0.33/  0.05 & \textcolor{red}{\textbf{  0.32}}/  0.07 &   0.33/  0.06 &   0.52/  0.04 &   0.52/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.03}} &   0.51/\textcolor{black}{\textbf{  0.03}} &   0.52/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.03}} & \underline{\textcolor{blue}{\textbf{  0.54}}}/\textcolor{black}{\textbf{  0.03}} \\\end{tabular}}\label{strats2bNB}
+94-yeast 4class &   0.52/  0.04 &   0.33/  0.05 & \textcolor{red}{\textbf{  0.32}}/  0.07 &   0.33/  0.06 &   0.52/  0.04 &   0.52/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.03}} &   0.51/\textcolor{black}{\textbf{  0.03}} &   0.52/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.03}} & \underline{\textcolor{blue}{\textbf{  0.54}}}/\textcolor{black}{\textbf{  0.03}} \\\end{tabular}
+}\label{strats2bNB}
 \end{center}
 \end{table}
+                                     
