--- a/stratstabRFw.tex
+++ b/stratstabRFw.tex
@@ -2,7 +2,9 @@
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador RFw. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 1-abalone 3class & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} &   0.56/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.58}}}/\textcolor{black}{\textbf{  0.02}} &   0.52/  0.05 &   0.53/  0.06 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\
+ \hline 
+1-abalone 3class & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} &   0.56/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.58}}}/\textcolor{black}{\textbf{  0.02}} &   0.52/  0.05 &   0.53/  0.06 \\
 2-arcene &   0.75/  0.04 &   0.74/  0.04 &   0.71/\textcolor{black}{\textbf{  0.03}} &   0.71/  0.04 &   0.70/  0.04 &   0.71/\textcolor{black}{\textbf{  0.03}} &   0.71/\textcolor{black}{\textbf{  0.03}} &   0.71/\textcolor{black}{\textbf{  0.03}} & \underline{\textcolor{blue}{\textbf{  0.78}}}/  0.04 &   0.71/\textcolor{black}{\textbf{  0.03}} &   0.75/  0.04 \\
 3-artificial charact... &   0.35/  0.02 &   0.35/  0.02 &   0.35/\textcolor{black}{\textbf{  0.01}} &   0.35/\textcolor{black}{\textbf{  0.01}} &   0.35/\textcolor{black}{\textbf{  0.01}} &   0.35/  0.02 &   0.35/  0.02 &   0.35/\textcolor{black}{\textbf{  0.01}} &   0.36/  0.02 &   0.34/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.37}}/  0.02 \\
 4-autoUniv au1 1000 & \textcolor{red}{\textbf{  0.53}}/  0.02 & \textcolor{red}{\textbf{  0.53}}/  0.02 & \textcolor{red}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.01}} &   0.54/  0.02 & \textcolor{red}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.53}}/  0.02 & \textcolor{red}{\textbf{  0.53}}/  0.02 &   0.54/  0.02 &   0.56/  0.02 &   0.54/  0.02 & \textcolor{blue}{\textbf{  0.57}}/  0.02 \\
@@ -33,13 +35,17 @@
 29-ionosphere &   0.87/\textcolor{black}{\textbf{  0.03}} &   0.88/\textcolor{black}{\textbf{  0.03}} &   0.85/\textcolor{black}{\textbf{  0.03}} &   0.85/\textcolor{black}{\textbf{  0.03}} &   0.85/\textcolor{black}{\textbf{  0.03}} &   0.86/\textcolor{black}{\textbf{  0.03}} &   0.86/\textcolor{black}{\textbf{  0.03}} &   0.86/\textcolor{black}{\textbf{  0.03}} &   0.88/  0.04 &   0.87/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.90}}/  0.04 \\
 30-iris & \textcolor{red}{\textbf{  0.92}}/  0.03 & \textcolor{red}{\textbf{  0.92}}/  0.03 & \textcolor{blue}{\textbf{  0.93}}/  0.03 & \textcolor{blue}{\textbf{  0.93}}/  0.03 & \textcolor{red}{\textbf{  0.92}}/  0.03 & \textcolor{blue}{\textbf{  0.93}}/  0.03 & \textcolor{blue}{\textbf{  0.93}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.93}}/  0.03 & \textcolor{blue}{\textbf{  0.93}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.93}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.93}}/  0.03 \\
 31-kr vs kp &   0.86/\textcolor{black}{\textbf{  0.01}} &   0.86/  0.02 &   0.84/\textcolor{black}{\textbf{  0.01}} &   0.84/\textcolor{black}{\textbf{  0.01}} &   0.84/\textcolor{black}{\textbf{  0.01}} &   0.85/\textcolor{black}{\textbf{  0.01}} &   0.85/\textcolor{black}{\textbf{  0.01}} &   0.85/\textcolor{black}{\textbf{  0.01}} &   0.89/\textcolor{black}{\textbf{  0.01}} &   0.82/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.91}}/\textcolor{black}{\textbf{  0.01}} \\
-32-leaf &   0.59/  0.04 &   0.60/  0.03 &   0.55/  0.03 &   0.56/\textcolor{black}{\textbf{  0.02}} &   0.56/\textcolor{black}{\textbf{  0.02}} &   0.56/\textcolor{black}{\textbf{  0.02}} &   0.56/  0.03 &   0.56/\textcolor{black}{\textbf{  0.02}} &   0.62/  0.03 &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.55/  0.03 \\\end{tabular}}\label{strats0aRFw}
+32-leaf &   0.59/  0.04 &   0.60/  0.03 &   0.55/  0.03 &   0.56/\textcolor{black}{\textbf{  0.02}} &   0.56/\textcolor{black}{\textbf{  0.02}} &   0.56/\textcolor{black}{\textbf{  0.02}} &   0.56/  0.03 &   0.56/\textcolor{black}{\textbf{  0.02}} &   0.62/  0.03 &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.55/  0.03 \\\end{tabular}
+}\label{strats0aRFw}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador RFw. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\ \hline 1-abalone 3class &   0.56/  0.06 & \textcolor{red}{\textbf{  0.50}}/  0.04 & \textcolor{red}{\textbf{  0.50}}/  0.04 &   0.54/  0.03 & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} &   0.54/  0.05 \\
+ & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\
+ \hline 
+1-abalone 3class &   0.56/  0.06 & \textcolor{red}{\textbf{  0.50}}/  0.04 & \textcolor{red}{\textbf{  0.50}}/  0.04 &   0.54/  0.03 & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.02}} &   0.54/  0.05 \\
 2-arcene &   0.75/  0.04 &   0.69/\textcolor{black}{\textbf{  0.03}} &   0.69/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.68}}/\textcolor{black}{\textbf{  0.03}} &   0.71/\textcolor{black}{\textbf{  0.03}} &   0.71/  0.04 &   0.70/\textcolor{black}{\textbf{  0.03}} &   0.75/  0.04 & \textcolor{black}{\textbf{  0.76}}/  0.04 &   0.70/  0.04 &   0.70/  0.04 \\
 3-artificial charact... & \textcolor{blue}{\textbf{  0.37}}/  0.02 & \textcolor{red}{\textbf{  0.17}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.17}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.17}}/\textcolor{black}{\textbf{  0.01}} &   0.35/  0.02 &   0.35/\textcolor{black}{\textbf{  0.01}} &   0.34/\textcolor{black}{\textbf{  0.01}} &   0.36/  0.02 & \textcolor{blue}{\textbf{  0.37}}/\textcolor{black}{\textbf{  0.01}} &   0.28/\textcolor{black}{\textbf{  0.01}} &   0.24/  0.02 \\
 4-autoUniv au1 1000 & \textcolor{blue}{\textbf{  0.57}}/  0.02 &   0.55/  0.02 &   0.55/  0.02 &   0.55/\textcolor{black}{\textbf{  0.01}} &   0.54/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.01}} &   0.54/\textcolor{black}{\textbf{  0.01}} &   0.54/  0.02 &   0.54/  0.02 &   0.55/\textcolor{black}{\textbf{  0.01}} &   0.56/\textcolor{black}{\textbf{  0.01}} \\
@@ -70,13 +76,17 @@
 29-ionosphere & \textcolor{blue}{\textbf{  0.90}}/  0.04 &   0.84/\textcolor{black}{\textbf{  0.03}} &   0.83/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.03}} &   0.86/\textcolor{black}{\textbf{  0.03}} &   0.86/\textcolor{black}{\textbf{  0.03}} &   0.86/\textcolor{black}{\textbf{  0.03}} &   0.88/  0.04 &   0.88/  0.04 &   0.84/\textcolor{black}{\textbf{  0.03}} &   0.84/\textcolor{black}{\textbf{  0.03}} \\
 30-iris & \textcolor{blue}{\textbf{  0.93}}/  0.03 & \textcolor{red}{\textbf{  0.92}}/  0.03 & \textcolor{red}{\textbf{  0.92}}/  0.03 & \textcolor{red}{\textbf{  0.92}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.93}}/  0.03 & \textcolor{blue}{\textbf{  0.93}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.93}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.92}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.93}}/  0.03 & \textcolor{blue}{\textbf{  0.93}}/  0.03 & \textcolor{red}{\textbf{  0.92}}/\textcolor{black}{\textbf{  0.02}} \\
 31-kr vs kp & \textcolor{blue}{\textbf{  0.91}}/\textcolor{black}{\textbf{  0.01}} &   0.79/  0.02 &   0.79/  0.02 &   0.79/  0.02 &   0.85/\textcolor{black}{\textbf{  0.01}} &   0.85/\textcolor{black}{\textbf{  0.01}} &   0.84/\textcolor{black}{\textbf{  0.01}} &   0.88/\textcolor{black}{\textbf{  0.01}} &   0.88/\textcolor{black}{\textbf{  0.01}} &   0.72/  0.04 & \textcolor{red}{\textbf{  0.71}}/  0.04 \\
-32-leaf & \textcolor{blue}{\textbf{  0.63}}/  0.03 & \textcolor{red}{\textbf{  0.47}}/  0.03 & \textcolor{red}{\textbf{  0.47}}/  0.03 & \textcolor{red}{\textbf{  0.47}}/  0.03 &   0.56/\textcolor{black}{\textbf{  0.02}} &   0.56/\textcolor{black}{\textbf{  0.02}} &   0.56/  0.03 &   0.61/  0.04 & \textcolor{blue}{\textbf{  0.63}}/  0.03 &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.52/  0.03 \\\end{tabular}}\label{strats0bRFw}
+32-leaf & \textcolor{blue}{\textbf{  0.63}}/  0.03 & \textcolor{red}{\textbf{  0.47}}/  0.03 & \textcolor{red}{\textbf{  0.47}}/  0.03 & \textcolor{red}{\textbf{  0.47}}/  0.03 &   0.56/\textcolor{black}{\textbf{  0.02}} &   0.56/\textcolor{black}{\textbf{  0.02}} &   0.56/  0.03 &   0.61/  0.04 & \textcolor{blue}{\textbf{  0.63}}/  0.03 &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.52/  0.03 \\\end{tabular}
+}\label{strats0bRFw}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador RFw. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 33-leukemia haslinger &   0.82/  0.07 &   0.82/  0.07 &   0.78/  0.06 &   0.78/  0.06 &   0.78/  0.06 &   0.78/  0.06 &   0.79/  0.06 &   0.78/  0.06 & \textcolor{blue}{\textbf{  0.83}}/  0.07 &   0.79/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.83}}/  0.06 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\
+ \hline 
+33-leukemia haslinger &   0.82/  0.07 &   0.82/  0.07 &   0.78/  0.06 &   0.78/  0.06 &   0.78/  0.06 &   0.78/  0.06 &   0.79/  0.06 &   0.78/  0.06 & \textcolor{blue}{\textbf{  0.83}}/  0.07 &   0.79/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.83}}/  0.06 \\
 34-mammographic mass &   0.79/\textcolor{black}{\textbf{  0.02}} &   0.79/  0.03 & \textcolor{red}{\textbf{  0.78}}/  0.03 &   0.79/  0.03 & \textcolor{red}{\textbf{  0.78}}/  0.03 & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.80}}/  0.03 & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} \\
 35-mfeat fourier &   0.66/  0.02 &   0.67/  0.02 &   0.59/\textcolor{black}{\textbf{  0.01}} &   0.59/  0.02 &   0.59/\textcolor{black}{\textbf{  0.01}} &   0.59/\textcolor{black}{\textbf{  0.01}} &   0.59/\textcolor{black}{\textbf{  0.01}} &   0.58/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.69}}/  0.02 &   0.53/  0.02 &   0.64/  0.02 \\
 36-molecular promotor... &   0.82/  0.04 &   0.80/  0.03 &   0.73/  0.03 &   0.72/  0.03 &   0.72/\textcolor{black}{\textbf{  0.02}} &   0.72/  0.03 &   0.72/\textcolor{black}{\textbf{  0.02}} &   0.72/  0.03 & \underline{\textcolor{blue}{\textbf{  0.84}}}/  0.03 &   0.71/  0.03 & \textcolor{black}{\textbf{  0.83}}/  0.03 \\
@@ -107,13 +117,17 @@
 61-spect heart &   0.65/  0.04 &   0.65/  0.05 &   0.63/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.62}}/  0.04 &   0.63/  0.04 &   0.63/\textcolor{black}{\textbf{  0.03}} &   0.63/  0.04 &   0.63/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.66}}/  0.04 &   0.63/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.66}}/  0.05 \\
 62-spectf heart &   0.57/  0.04 &   0.58/  0.05 &   0.58/  0.03 & \textcolor{blue}{\textbf{  0.59}}/  0.04 &   0.58/  0.04 &   0.57/\textcolor{black}{\textbf{  0.02}} &   0.58/  0.03 &   0.57/  0.03 &   0.58/  0.04 &   0.57/\textcolor{black}{\textbf{  0.02}} &   0.58/  0.04 \\
 63-statlog australian... &   0.83/  0.03 &   0.83/  0.03 &   0.81/\textcolor{black}{\textbf{  0.02}} &   0.82/\textcolor{black}{\textbf{  0.02}} &   0.81/\textcolor{black}{\textbf{  0.02}} &   0.81/\textcolor{black}{\textbf{  0.02}} &   0.82/\textcolor{black}{\textbf{  0.02}} &   0.81/  0.03 & \textcolor{blue}{\textbf{  0.84}}/  0.03 &   0.81/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.84}}/\textcolor{black}{\textbf{  0.02}} \\
-64-statlog german cre... &   0.59/  0.03 &   0.60/  0.05 &   0.58/  0.02 &   0.59/  0.02 &   0.59/  0.02 &   0.58/  0.02 &   0.58/  0.02 &   0.58/  0.02 &   0.61/  0.03 &   0.59/  0.03 & \textcolor{blue}{\textbf{  0.62}}/  0.03 \\\end{tabular}}\label{strats1aRFw}
+64-statlog german cre... &   0.59/  0.03 &   0.60/  0.05 &   0.58/  0.02 &   0.59/  0.02 &   0.59/  0.02 &   0.58/  0.02 &   0.58/  0.02 &   0.58/  0.02 &   0.61/  0.03 &   0.59/  0.03 & \textcolor{blue}{\textbf{  0.62}}/  0.03 \\\end{tabular}
+}\label{strats1aRFw}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador RFw. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\ \hline 33-leukemia haslinger & \textcolor{blue}{\textbf{  0.83}}/  0.06 &   0.78/\textcolor{black}{\textbf{  0.05}} &   0.78/  0.06 &   0.79/  0.06 & \textcolor{red}{\textbf{  0.77}}/  0.06 &   0.78/  0.06 &   0.78/  0.06 &   0.82/  0.07 & \textcolor{blue}{\textbf{  0.83}}/  0.07 &   0.78/\textcolor{black}{\textbf{  0.05}} &   0.78/\textcolor{black}{\textbf{  0.05}} \\
+ & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\
+ \hline 
+33-leukemia haslinger & \textcolor{blue}{\textbf{  0.83}}/  0.06 &   0.78/\textcolor{black}{\textbf{  0.05}} &   0.78/  0.06 &   0.79/  0.06 & \textcolor{red}{\textbf{  0.77}}/  0.06 &   0.78/  0.06 &   0.78/  0.06 &   0.82/  0.07 & \textcolor{blue}{\textbf{  0.83}}/  0.07 &   0.78/\textcolor{black}{\textbf{  0.05}} &   0.78/\textcolor{black}{\textbf{  0.05}} \\
 34-mammographic mass & \textcolor{blue}{\textbf{  0.80}}/  0.03 & \textcolor{blue}{\textbf{  0.80}}/  0.03 &   0.79/  0.03 & \textcolor{blue}{\textbf{  0.80}}/  0.03 & \textcolor{blue}{\textbf{  0.80}}/  0.03 & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.80}}/  0.03 &   0.79/  0.03 & \textcolor{blue}{\textbf{  0.80}}/  0.03 & \textcolor{blue}{\textbf{  0.80}}/  0.03 &   0.79/\textcolor{black}{\textbf{  0.02}} \\
 35-mfeat fourier & \underline{\textcolor{blue}{\textbf{  0.70}}}/  0.02 & \textcolor{red}{\textbf{  0.39}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.39}}/\textcolor{black}{\textbf{  0.01}} &   0.43/\textcolor{black}{\textbf{  0.01}} &   0.59/\textcolor{black}{\textbf{  0.01}} &   0.59/\textcolor{black}{\textbf{  0.01}} &   0.58/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.69}}/  0.02 & \textcolor{black}{\textbf{  0.69}}/  0.02 &   0.49/  0.02 &   0.46/  0.02 \\
 36-molecular promotor... & \textcolor{black}{\textbf{  0.83}}/  0.03 &   0.69/  0.03 & \textcolor{red}{\textbf{  0.68}}/\textcolor{black}{\textbf{  0.02}} &   0.72/  0.03 &   0.72/\textcolor{black}{\textbf{  0.02}} &   0.72/\textcolor{black}{\textbf{  0.02}} &   0.71/  0.03 & \textcolor{black}{\textbf{  0.83}}/  0.03 &   0.80/  0.03 &   0.73/\textcolor{black}{\textbf{  0.02}} &   0.71/\textcolor{black}{\textbf{  0.02}} \\
@@ -144,13 +158,17 @@
 61-spect heart & \textcolor{blue}{\textbf{  0.66}}/  0.05 & \textcolor{red}{\textbf{  0.62}}/\textcolor{black}{\textbf{  0.03}} &   0.63/\textcolor{black}{\textbf{  0.03}} &   0.63/  0.04 &   0.63/\textcolor{black}{\textbf{  0.03}} &   0.63/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.62}}/  0.04 & \textcolor{blue}{\textbf{  0.66}}/  0.04 & \textcolor{blue}{\textbf{  0.66}}/  0.04 & \textcolor{red}{\textbf{  0.62}}/  0.04 &   0.63/  0.04 \\
 62-spectf heart &   0.58/  0.04 &   0.58/  0.03 &   0.58/  0.03 &   0.58/  0.03 & \textcolor{red}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.02}} &   0.57/  0.03 &   0.57/\textcolor{black}{\textbf{  0.02}} &   0.58/  0.05 & \textcolor{blue}{\textbf{  0.59}}/  0.04 &   0.58/\textcolor{black}{\textbf{  0.02}} &   0.57/\textcolor{black}{\textbf{  0.02}} \\
 63-statlog australian... & \textcolor{blue}{\textbf{  0.84}}/\textcolor{black}{\textbf{  0.02}} &   0.82/\textcolor{black}{\textbf{  0.02}} &   0.81/\textcolor{black}{\textbf{  0.02}} &   0.81/\textcolor{black}{\textbf{  0.02}} &   0.81/  0.03 &   0.82/\textcolor{black}{\textbf{  0.02}} &   0.82/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.84}}/  0.03 & \textcolor{blue}{\textbf{  0.84}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.79}}/  0.03 &   0.81/  0.03 \\
-64-statlog german cre... & \textcolor{blue}{\textbf{  0.62}}/  0.03 &   0.57/\textcolor{black}{\textbf{  0.01}} &   0.57/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.01}} &   0.58/  0.02 &   0.58/  0.02 &   0.58/  0.03 &   0.60/  0.03 &   0.59/  0.03 &   0.58/  0.02 &   0.58/  0.02 \\\end{tabular}}\label{strats1bRFw}
+64-statlog german cre... & \textcolor{blue}{\textbf{  0.62}}/  0.03 &   0.57/\textcolor{black}{\textbf{  0.01}} &   0.57/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.01}} &   0.58/  0.02 &   0.58/  0.02 &   0.58/  0.03 &   0.60/  0.03 &   0.59/  0.03 &   0.58/  0.02 &   0.58/  0.02 \\\end{tabular}
+}\label{strats1bRFw}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador RFw. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 65-statlog heart &   0.79/  0.04 &   0.78/  0.04 &   0.77/  0.04 &   0.77/  0.04 &   0.77/  0.04 &   0.78/\textcolor{black}{\textbf{  0.03}} &   0.78/\textcolor{black}{\textbf{  0.03}} &   0.77/  0.04 & \textcolor{blue}{\textbf{  0.80}}/  0.04 &   0.77/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.80}}/  0.04 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\
+ \hline 
+65-statlog heart &   0.79/  0.04 &   0.78/  0.04 &   0.77/  0.04 &   0.77/  0.04 &   0.77/  0.04 &   0.78/\textcolor{black}{\textbf{  0.03}} &   0.78/\textcolor{black}{\textbf{  0.03}} &   0.77/  0.04 & \textcolor{blue}{\textbf{  0.80}}/  0.04 &   0.77/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.80}}/  0.04 \\
 66-statlog image segm... &   0.86/  0.02 &   0.88/\textcolor{black}{\textbf{  0.01}} &   0.86/\textcolor{black}{\textbf{  0.01}} &   0.87/\textcolor{black}{\textbf{  0.01}} &   0.86/\textcolor{black}{\textbf{  0.01}} &   0.88/\textcolor{black}{\textbf{  0.01}} &   0.88/\textcolor{black}{\textbf{  0.01}} &   0.88/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.90}}/\textcolor{black}{\textbf{  0.01}} &   0.85/\textcolor{black}{\textbf{  0.01}} &   0.88/  0.02 \\
 67-statlog landsat sa... &   0.77/  0.02 &   0.79/  0.02 &   0.77/  0.02 &   0.78/  0.02 &   0.76/  0.02 &   0.77/  0.02 &   0.77/  0.02 &   0.78/  0.02 &   0.80/  0.02 &   0.74/  0.03 &   0.76/  0.03 \\
 68-statlog vehicle si... &   0.65/\textcolor{black}{\textbf{  0.02}} &   0.65/  0.03 &   0.64/\textcolor{black}{\textbf{  0.02}} &   0.65/\textcolor{black}{\textbf{  0.02}} &   0.65/\textcolor{black}{\textbf{  0.02}} &   0.65/\textcolor{black}{\textbf{  0.02}} &   0.66/\textcolor{black}{\textbf{  0.02}} &   0.66/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.67}}/\textcolor{black}{\textbf{  0.02}} &   0.62/\textcolor{black}{\textbf{  0.02}} &   0.63/\textcolor{black}{\textbf{  0.02}} \\
@@ -179,13 +197,17 @@
 91-wilt & \textcolor{red}{\textbf{  0.62}}/  0.06 &   0.63/  0.05 & \textcolor{red}{\textbf{  0.62}}/  0.05 &   0.63/  0.04 &   0.66/  0.04 &   0.79/  0.04 &   0.79/  0.04 &   0.65/  0.07 &   0.70/  0.05 &   0.79/  0.04 & \textcolor{blue}{\textbf{  0.81}}/  0.04 \\
 92-wine &   0.95/  0.02 &   0.94/  0.02 &   0.93/  0.02 &   0.93/  0.02 &   0.93/  0.02 &   0.94/  0.02 &   0.94/  0.02 &   0.94/  0.02 & \textcolor{blue}{\textbf{  0.96}}/  0.02 &   0.93/  0.02 & \textcolor{blue}{\textbf{  0.96}}/  0.02 \\ \hline
 93-wine quality white... & \textcolor{blue}{\textbf{  0.28}}/  0.02 & \textcolor{blue}{\textbf{  0.28}}/  0.02 & \textcolor{blue}{\textbf{  0.28}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.28}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.28}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.28}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.28}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.28}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.28}}/  0.02 &   0.26/\textcolor{black}{\textbf{  0.01}} &   0.27/  0.02 \\
-94-yeast 4class &   0.58/  0.03 &   0.59/  0.03 &   0.57/  0.03 &   0.56/  0.03 &   0.57/  0.03 &   0.57/\textcolor{black}{\textbf{  0.02}} &   0.57/  0.03 &   0.57/  0.03 &   0.59/\textcolor{black}{\textbf{  0.02}} &   0.57/  0.03 &   0.57/\textcolor{black}{\textbf{  0.02}} \\\end{tabular}}\label{strats2aRFw}
+94-yeast 4class &   0.58/  0.03 &   0.59/  0.03 &   0.57/  0.03 &   0.56/  0.03 &   0.57/  0.03 &   0.57/\textcolor{black}{\textbf{  0.02}} &   0.57/  0.03 &   0.57/  0.03 &   0.59/\textcolor{black}{\textbf{  0.02}} &   0.57/  0.03 &   0.57/\textcolor{black}{\textbf{  0.02}} \\\end{tabular}
+}\label{strats2aRFw}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador RFw. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\ \hline 65-statlog heart & \textcolor{blue}{\textbf{  0.80}}/  0.04 &   0.77/\textcolor{black}{\textbf{  0.03}} &   0.77/\textcolor{black}{\textbf{  0.03}} &   0.78/\textcolor{black}{\textbf{  0.03}} &   0.77/  0.04 &   0.78/\textcolor{black}{\textbf{  0.03}} &   0.77/\textcolor{black}{\textbf{  0.03}} &   0.79/  0.04 &   0.79/  0.04 &   0.77/  0.04 & \textcolor{red}{\textbf{  0.76}}/  0.04 \\
+ & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\
+ \hline 
+65-statlog heart & \textcolor{blue}{\textbf{  0.80}}/  0.04 &   0.77/\textcolor{black}{\textbf{  0.03}} &   0.77/\textcolor{black}{\textbf{  0.03}} &   0.78/\textcolor{black}{\textbf{  0.03}} &   0.77/  0.04 &   0.78/\textcolor{black}{\textbf{  0.03}} &   0.77/\textcolor{black}{\textbf{  0.03}} &   0.79/  0.04 &   0.79/  0.04 &   0.77/  0.04 & \textcolor{red}{\textbf{  0.76}}/  0.04 \\
 66-statlog image segm... & \underline{\textcolor{blue}{\textbf{  0.91}}}/  0.02 &   0.62/  0.03 & \textcolor{red}{\textbf{  0.61}}/  0.03 &   0.71/  0.03 &   0.88/\textcolor{black}{\textbf{  0.01}} &   0.88/\textcolor{black}{\textbf{  0.01}} &   0.88/\textcolor{black}{\textbf{  0.01}} &   0.89/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.90}}/\textcolor{black}{\textbf{  0.01}} &   0.80/  0.02 &   0.79/  0.02 \\
 67-statlog landsat sa... & \underline{\textcolor{blue}{\textbf{  0.82}}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.53}}/  0.05 & \textcolor{red}{\textbf{  0.53}}/  0.05 &   0.68/  0.03 &   0.77/  0.02 &   0.77/\textcolor{black}{\textbf{  0.01}} &   0.77/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.81}}/  0.02 &   0.72/  0.03 &   0.69/  0.04 \\
 68-statlog vehicle si... & \textcolor{blue}{\textbf{  0.67}}/\textcolor{black}{\textbf{  0.02}} &   0.58/\textcolor{black}{\textbf{  0.02}} &   0.57/\textcolor{black}{\textbf{  0.02}} &   0.57/  0.03 &   0.64/\textcolor{black}{\textbf{  0.02}} &   0.65/\textcolor{black}{\textbf{  0.02}} &   0.66/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.67}}/  0.03 & \textcolor{blue}{\textbf{  0.67}}/\textcolor{black}{\textbf{  0.02}} &   0.57/  0.03 & \textcolor{red}{\textbf{  0.56}}/  0.05 \\
@@ -214,6 +236,8 @@
 91-wilt & \textcolor{blue}{\textbf{  0.81}}/  0.04 & \textcolor{blue}{\textbf{  0.81}}/\textcolor{darkgreen}{\textbf{  0.02}} &   0.80/\textcolor{black}{\textbf{  0.03}} &   0.72/  0.05 &   0.79/\textcolor{black}{\textbf{  0.03}} &   0.80/\textcolor{black}{\textbf{  0.03}} &   0.73/  0.06 &   0.69/  0.06 &   0.76/  0.06 &   0.79/  0.06 &   0.80/\textcolor{black}{\textbf{  0.03}} \\
 92-wine & \textcolor{blue}{\textbf{  0.96}}/  0.02 &   0.93/  0.02 &   0.93/  0.02 &   0.93/\textcolor{black}{\textbf{  0.01}} &   0.94/  0.02 &   0.94/  0.02 &   0.93/\textcolor{black}{\textbf{  0.01}} &   0.95/\textcolor{black}{\textbf{  0.01}} &   0.95/  0.02 & \textcolor{red}{\textbf{  0.92}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.92}}/  0.02 \\ \hline
 93-wine quality white... & \textcolor{blue}{\textbf{  0.28}}/  0.02 & \textcolor{red}{\textbf{  0.24}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.24}}/\textcolor{black}{\textbf{  0.01}} &   0.25/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.28}}/  0.02 & \textcolor{blue}{\textbf{  0.28}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.28}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.28}}/  0.02 & \textcolor{blue}{\textbf{  0.28}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.28}}/\textcolor{black}{\textbf{  0.01}} &   0.27/  0.02 \\
-94-yeast 4class & \textcolor{blue}{\textbf{  0.60}}/  0.03 &   0.41/  0.03 & \textcolor{red}{\textbf{  0.39}}/  0.03 &   0.42/  0.03 &   0.57/  0.03 &   0.57/  0.03 &   0.57/  0.03 &   0.59/  0.03 & \textcolor{blue}{\textbf{  0.60}}/\textcolor{black}{\textbf{  0.02}} &   0.55/  0.03 &   0.56/\textcolor{black}{\textbf{  0.02}} \\\end{tabular}}\label{strats2bRFw}
+94-yeast 4class & \textcolor{blue}{\textbf{  0.60}}/  0.03 &   0.41/  0.03 & \textcolor{red}{\textbf{  0.39}}/  0.03 &   0.42/  0.03 &   0.57/  0.03 &   0.57/  0.03 &   0.57/  0.03 &   0.59/  0.03 & \textcolor{blue}{\textbf{  0.60}}/\textcolor{black}{\textbf{  0.02}} &   0.55/  0.03 &   0.56/\textcolor{black}{\textbf{  0.02}} \\\end{tabular}
+}\label{strats2bRFw}
 \end{center}
 \end{table}
+                                     
