--- a/stratstabSVM.tex
+++ b/stratstabSVM.tex
@@ -2,7 +2,9 @@
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador SVM. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 1-abalone 3class &   0.53/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{darkgreen}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.55}}}/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.42}}/  0.05 &   0.52/\textcolor{black}{\textbf{  0.02}} \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\
+ \hline 
+1-abalone 3class &   0.53/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{darkgreen}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.55}}}/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.42}}/  0.05 &   0.52/\textcolor{black}{\textbf{  0.02}} \\
 2-arcene &   0.73/  0.04 &   0.73/  0.04 & \textcolor{red}{\textbf{  0.71}}/  0.04 & \textcolor{red}{\textbf{  0.71}}/  0.04 &   0.72/  0.04 &   0.73/  0.04 &   0.73/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.75}}/  0.04 &   0.74/  0.04 &   0.74/  0.04 &   0.74/  0.04 \\
 3-artificial charact... &   0.25/  0.02 &   0.25/  0.02 &   0.24/  0.02 &   0.24/  0.02 &   0.24/\textcolor{black}{\textbf{  0.01}} &   0.25/\textcolor{black}{\textbf{  0.01}} &   0.25/\textcolor{black}{\textbf{  0.01}} &   0.24/  0.02 &   0.25/  0.02 &   0.25/  0.02 & \textcolor{blue}{\textbf{  0.26}}/  0.03 \\
 4-autoUniv au1 1000 & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} &   0.52/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.01}} &   0.52/  0.02 & \textcolor{red}{\textbf{  0.51}}/  0.02 \\
@@ -33,13 +35,17 @@
 29-ionosphere &   0.89/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.90}}/\textcolor{black}{\textbf{  0.02}} &   0.89/\textcolor{black}{\textbf{  0.02}} &   0.89/\textcolor{black}{\textbf{  0.02}} &   0.89/\textcolor{black}{\textbf{  0.02}} &   0.89/\textcolor{black}{\textbf{  0.02}} &   0.89/\textcolor{black}{\textbf{  0.02}} &   0.89/\textcolor{black}{\textbf{  0.02}} &   0.89/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.90}}/\textcolor{black}{\textbf{  0.02}} &   0.87/  0.04 \\
 30-iris & \textcolor{black}{\textbf{  0.90}}/  0.03 & \textcolor{black}{\textbf{  0.90}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.90}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.90}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.90}}/  0.03 &   0.89/  0.03 & \textcolor{black}{\textbf{  0.90}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.90}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.90}}/  0.03 & \textcolor{black}{\textbf{  0.90}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.84}}/  0.04 \\
 31-kr vs kp &   0.79/  0.02 &   0.79/  0.02 &   0.80/\textcolor{black}{\textbf{  0.01}} &   0.80/  0.02 &   0.80/  0.02 &   0.81/  0.02 &   0.82/\textcolor{black}{\textbf{  0.01}} &   0.81/  0.02 &   0.79/  0.02 &   0.78/  0.03 &   0.82/  0.03 \\
-32-leaf &   0.31/  0.02 &   0.30/  0.02 &   0.30/  0.02 &   0.31/  0.02 &   0.30/  0.02 &   0.31/  0.02 &   0.31/  0.02 &   0.30/\textcolor{black}{\textbf{  0.01}} &   0.31/  0.02 &   0.28/  0.02 &   0.31/  0.02 \\\end{tabular}}\label{strats0aSVM}
+32-leaf &   0.31/  0.02 &   0.30/  0.02 &   0.30/  0.02 &   0.31/  0.02 &   0.30/  0.02 &   0.31/  0.02 &   0.31/  0.02 &   0.30/\textcolor{black}{\textbf{  0.01}} &   0.31/  0.02 &   0.28/  0.02 &   0.31/  0.02 \\\end{tabular}
+}\label{strats0aSVM}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador SVM. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\ \hline 1-abalone 3class & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} &   0.46/  0.05 & \textcolor{red}{\textbf{  0.42}}/  0.06 &   0.48/  0.03 & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} &   0.50/  0.08 \\
+ & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\
+ \hline 
+1-abalone 3class & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} &   0.46/  0.05 & \textcolor{red}{\textbf{  0.42}}/  0.06 &   0.48/  0.03 & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} &   0.50/  0.08 \\
 2-arcene &   0.73/  0.04 &   0.73/  0.04 &   0.73/  0.04 &   0.73/  0.04 &   0.73/\textcolor{black}{\textbf{  0.03}} &   0.74/  0.04 & \textcolor{black}{\textbf{  0.75}}/  0.04 &   0.74/  0.04 & \underline{\textcolor{blue}{\textbf{  0.76}}}/  0.04 &   0.72/  0.05 &   0.72/  0.05 \\
 3-artificial charact... & \textcolor{blue}{\textbf{  0.26}}/  0.02 & \textcolor{red}{\textbf{  0.13}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.13}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.13}}/\textcolor{black}{\textbf{  0.01}} &   0.25/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.26}}/\textcolor{black}{\textbf{  0.01}} &   0.25/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.26}}/  0.02 & \textcolor{blue}{\textbf{  0.26}}/  0.02 &   0.23/\textcolor{black}{\textbf{  0.01}} &   0.21/  0.03 \\
 4-autoUniv au1 1000 & \textcolor{red}{\textbf{  0.51}}/  0.02 &   0.53/  0.02 & \textcolor{black}{\textbf{  0.54}}/  0.02 & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.01}} &   0.52/  0.02 & \textcolor{red}{\textbf{  0.51}}/  0.02 & \textcolor{red}{\textbf{  0.51}}/  0.02 & \textcolor{red}{\textbf{  0.51}}/  0.02 &   0.53/  0.02 & \textcolor{black}{\textbf{  0.54}}/  0.02 & \underline{\textcolor{blue}{\textbf{  0.55}}}/  0.02 \\
@@ -70,13 +76,17 @@
 29-ionosphere &   0.87/  0.04 &   0.87/  0.03 &   0.87/  0.03 & \textcolor{red}{\textbf{  0.79}}/  0.06 &   0.87/  0.06 &   0.88/  0.03 &   0.89/\textcolor{black}{\textbf{  0.02}} &   0.89/  0.03 &   0.89/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.90}}/\textcolor{black}{\textbf{  0.02}} &   0.89/\textcolor{black}{\textbf{  0.02}} \\
 30-iris &   0.87/  0.04 &   0.88/  0.03 &   0.88/  0.03 &   0.89/\textcolor{black}{\textbf{  0.02}} &   0.89/\textcolor{black}{\textbf{  0.02}} &   0.89/\textcolor{black}{\textbf{  0.02}} &   0.88/  0.03 &   0.88/  0.03 &   0.86/  0.04 &   0.87/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.91}}}/\textcolor{black}{\textbf{  0.02}} \\
 31-kr vs kp &   0.82/  0.03 &   0.81/\textcolor{black}{\textbf{  0.01}} &   0.80/  0.02 &   0.81/  0.02 & \textcolor{blue}{\textbf{  0.83}}/  0.02 & \textcolor{blue}{\textbf{  0.83}}/  0.02 & \textcolor{blue}{\textbf{  0.83}}/  0.02 &   0.79/\textcolor{black}{\textbf{  0.01}} &   0.82/\textcolor{black}{\textbf{  0.01}} &   0.71/  0.04 & \textcolor{red}{\textbf{  0.70}}/  0.03 \\
-32-leaf & \textcolor{black}{\textbf{  0.32}}/  0.02 &   0.21/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.20}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.20}}/\textcolor{black}{\textbf{  0.01}} &   0.31/\textcolor{black}{\textbf{  0.01}} &   0.31/  0.02 &   0.31/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.32}}/  0.02 & \textcolor{black}{\textbf{  0.32}}/  0.02 & \textcolor{black}{\textbf{  0.32}}/  0.02 & \underline{\textcolor{blue}{\textbf{  0.33}}}/  0.02 \\\end{tabular}}\label{strats0bSVM}
+32-leaf & \textcolor{black}{\textbf{  0.32}}/  0.02 &   0.21/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.20}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.20}}/\textcolor{black}{\textbf{  0.01}} &   0.31/\textcolor{black}{\textbf{  0.01}} &   0.31/  0.02 &   0.31/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.32}}/  0.02 & \textcolor{black}{\textbf{  0.32}}/  0.02 & \textcolor{black}{\textbf{  0.32}}/  0.02 & \underline{\textcolor{blue}{\textbf{  0.33}}}/  0.02 \\\end{tabular}
+}\label{strats0bSVM}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador SVM. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 33-leukemia haslinger &   0.83/  0.06 &   0.83/\textcolor{black}{\textbf{  0.05}} &   0.83/  0.06 &   0.83/\textcolor{black}{\textbf{  0.05}} &   0.83/  0.06 &   0.83/\textcolor{black}{\textbf{  0.05}} &   0.82/\textcolor{black}{\textbf{  0.05}} &   0.80/\textcolor{black}{\textbf{  0.05}} &   0.83/  0.06 &   0.83/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.76}}/  0.06 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\
+ \hline 
+33-leukemia haslinger &   0.83/  0.06 &   0.83/\textcolor{black}{\textbf{  0.05}} &   0.83/  0.06 &   0.83/\textcolor{black}{\textbf{  0.05}} &   0.83/  0.06 &   0.83/\textcolor{black}{\textbf{  0.05}} &   0.82/\textcolor{black}{\textbf{  0.05}} &   0.80/\textcolor{black}{\textbf{  0.05}} &   0.83/  0.06 &   0.83/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.76}}/  0.06 \\
 34-mammographic mass & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} &   0.76/  0.03 & \textcolor{blue}{\textbf{  0.77}}/  0.03 & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.74}}/  0.04 &   0.76/  0.03 \\
 35-mfeat fourier &   0.57/  0.02 &   0.57/  0.02 &   0.57/\textcolor{black}{\textbf{  0.01}} &   0.58/  0.02 &   0.57/  0.02 &   0.58/  0.02 &   0.58/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.59}}/  0.02 &   0.57/  0.02 &   0.55/  0.03 & \textcolor{red}{\textbf{  0.40}}/  0.07 \\
 36-molecular promotor... &   0.76/  0.04 &   0.74/  0.05 & \textcolor{red}{\textbf{  0.73}}/  0.04 & \textcolor{red}{\textbf{  0.73}}/\textcolor{black}{\textbf{  0.03}} &   0.75/  0.04 & \textcolor{red}{\textbf{  0.73}}/  0.06 & \textcolor{red}{\textbf{  0.73}}/\textcolor{black}{\textbf{  0.03}} &   0.75/  0.05 &   0.76/  0.04 &   0.75/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.73}}/  0.05 \\
@@ -107,13 +117,17 @@
 61-spect heart &   0.62/\textcolor{black}{\textbf{  0.03}} &   0.62/  0.04 & \textcolor{black}{\textbf{  0.63}}/\textcolor{black}{\textbf{  0.03}} &   0.62/  0.04 & \textcolor{black}{\textbf{  0.63}}/\textcolor{black}{\textbf{  0.03}} &   0.62/\textcolor{darkgreen}{\textbf{  0.02}} &   0.62/  0.04 &   0.62/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.63}}/\textcolor{black}{\textbf{  0.03}} &   0.62/\textcolor{black}{\textbf{  0.03}} &   0.62/\textcolor{black}{\textbf{  0.03}} \\
 62-spectf heart &   0.55/  0.04 &   0.54/  0.03 & \textcolor{black}{\textbf{  0.56}}/  0.05 & \underline{\textcolor{blue}{\textbf{  0.57}}}/  0.05 &   0.55/  0.04 &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.54/  0.03 &   0.54/  0.03 &   0.55/  0.04 &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} \\
 63-statlog australian... & \textcolor{red}{\textbf{  0.80}}/  0.03 &   0.81/  0.03 &   0.81/\textcolor{black}{\textbf{  0.02}} &   0.81/\textcolor{black}{\textbf{  0.02}} &   0.81/\textcolor{black}{\textbf{  0.02}} &   0.81/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.82}}/\textcolor{black}{\textbf{  0.02}} &   0.81/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.80}}/  0.03 &   0.81/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.80}}/  0.03 \\
-64-statlog german cre... &   0.56/  0.04 & \textcolor{blue}{\textbf{  0.57}}/  0.04 &   0.55/  0.03 &   0.55/  0.03 &   0.56/  0.03 &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.56/\textcolor{black}{\textbf{  0.02}} &   0.56/  0.04 &   0.55/  0.03 &   0.55/  0.03 \\\end{tabular}}\label{strats1aSVM}
+64-statlog german cre... &   0.56/  0.04 & \textcolor{blue}{\textbf{  0.57}}/  0.04 &   0.55/  0.03 &   0.55/  0.03 &   0.56/  0.03 &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.56/\textcolor{black}{\textbf{  0.02}} &   0.56/  0.04 &   0.55/  0.03 &   0.55/  0.03 \\\end{tabular}
+}\label{strats1aSVM}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador SVM. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\ \hline 33-leukemia haslinger & \textcolor{red}{\textbf{  0.76}}/  0.06 &   0.77/\textcolor{black}{\textbf{  0.05}} &   0.77/\textcolor{black}{\textbf{  0.05}} &   0.77/\textcolor{black}{\textbf{  0.05}} &   0.77/  0.07 &   0.78/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.76}}/  0.06 &   0.82/  0.06 & \textcolor{black}{\textbf{  0.84}}/  0.06 &   0.83/  0.06 & \underline{\textcolor{blue}{\textbf{  0.85}}}/  0.06 \\
+ & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\
+ \hline 
+33-leukemia haslinger & \textcolor{red}{\textbf{  0.76}}/  0.06 &   0.77/\textcolor{black}{\textbf{  0.05}} &   0.77/\textcolor{black}{\textbf{  0.05}} &   0.77/\textcolor{black}{\textbf{  0.05}} &   0.77/  0.07 &   0.78/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.76}}/  0.06 &   0.82/  0.06 & \textcolor{black}{\textbf{  0.84}}/  0.06 &   0.83/  0.06 & \underline{\textcolor{blue}{\textbf{  0.85}}}/  0.06 \\
 34-mammographic mass &   0.75/  0.03 & \textcolor{red}{\textbf{  0.74}}/  0.03 & \textcolor{red}{\textbf{  0.74}}/  0.03 & \textcolor{red}{\textbf{  0.74}}/  0.03 &   0.76/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} \\
 35-mfeat fourier &   0.57/  0.05 &   0.44/  0.02 &   0.46/  0.02 &   0.49/  0.02 &   0.57/  0.04 &   0.58/  0.02 &   0.58/  0.03 &   0.58/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.59}}/  0.02 &   0.45/  0.03 &   0.46/  0.04 \\
 36-molecular promotor... & \textcolor{red}{\textbf{  0.73}}/  0.05 & \textcolor{red}{\textbf{  0.73}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.73}}/  0.04 &   0.75/  0.04 &   0.75/  0.05 &   0.75/  0.04 &   0.75/  0.05 & \textcolor{black}{\textbf{  0.78}}/  0.04 & \underline{\textcolor{blue}{\textbf{  0.79}}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.73}}/\textcolor{black}{\textbf{  0.03}} &   0.74/\textcolor{black}{\textbf{  0.03}} \\
@@ -144,13 +158,17 @@
 61-spect heart &   0.62/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.60}}/\textcolor{black}{\textbf{  0.03}} &   0.61/\textcolor{black}{\textbf{  0.03}} &   0.61/\textcolor{black}{\textbf{  0.03}} &   0.62/  0.04 &   0.62/\textcolor{black}{\textbf{  0.03}} &   0.62/  0.04 & \textcolor{black}{\textbf{  0.63}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.63}}/  0.04 & \textcolor{black}{\textbf{  0.63}}/  0.04 & \underline{\textcolor{blue}{\textbf{  0.64}}}/  0.05 \\
 62-spectf heart &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.55/  0.03 &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.54/  0.03 &   0.55/  0.03 &   0.52/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.51}}/\textcolor{black}{\textbf{  0.02}} \\
 63-statlog australian... & \textcolor{red}{\textbf{  0.80}}/  0.03 &   0.81/  0.03 &   0.81/\textcolor{black}{\textbf{  0.02}} &   0.81/\textcolor{black}{\textbf{  0.02}} &   0.81/\textcolor{black}{\textbf{  0.02}} &   0.81/  0.03 &   0.81/\textcolor{black}{\textbf{  0.02}} &   0.81/  0.03 & \textcolor{blue}{\textbf{  0.82}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.80}}/  0.03 &   0.81/  0.03 \\
-64-statlog german cre... &   0.55/  0.03 &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.54/  0.03 & \textcolor{red}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.56/  0.03 & \textcolor{blue}{\textbf{  0.57}}/  0.03 &   0.56/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.55/  0.03 \\\end{tabular}}\label{strats1bSVM}
+64-statlog german cre... &   0.55/  0.03 &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.54/  0.03 & \textcolor{red}{\textbf{  0.53}}/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.56/  0.03 & \textcolor{blue}{\textbf{  0.57}}/  0.03 &   0.56/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.55/  0.03 \\\end{tabular}
+}\label{strats1bSVM}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador SVM. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\ \hline 65-statlog heart &   0.79/  0.04 & \textcolor{red}{\textbf{  0.78}}/  0.04 &   0.79/  0.04 &   0.79/  0.04 & \textcolor{red}{\textbf{  0.78}}/  0.04 & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.03}} &   0.79/  0.04 & \textcolor{blue}{\textbf{  0.80}}/  0.04 &   0.79/  0.04 &   0.79/  0.04 & \textcolor{red}{\textbf{  0.78}}/  0.04 \\
+ & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & \textbf{HTUeuc} & \textbf{HTUman} & \textbf{HTUmah} & \textbf{SGmulti} & QBCRFw & Ent\\
+ \hline 
+65-statlog heart &   0.79/  0.04 & \textcolor{red}{\textbf{  0.78}}/  0.04 &   0.79/  0.04 &   0.79/  0.04 & \textcolor{red}{\textbf{  0.78}}/  0.04 & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.03}} &   0.79/  0.04 & \textcolor{blue}{\textbf{  0.80}}/  0.04 &   0.79/  0.04 &   0.79/  0.04 & \textcolor{red}{\textbf{  0.78}}/  0.04 \\
 66-statlog image segm... &   0.75/  0.02 &   0.77/  0.02 &   0.77/\textcolor{black}{\textbf{  0.01}} &   0.77/\textcolor{black}{\textbf{  0.01}} &   0.78/\textcolor{black}{\textbf{  0.01}} &   0.78/  0.02 &   0.78/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.79}}/\textcolor{black}{\textbf{  0.01}} &   0.75/  0.02 &   0.68/  0.02 &   0.62/  0.03 \\
 67-statlog landsat sa... &   0.71/  0.03 &   0.74/\textcolor{black}{\textbf{  0.02}} &   0.74/  0.03 &   0.75/\textcolor{black}{\textbf{  0.02}} &   0.73/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.76}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.76}}/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.77}}}/\textcolor{black}{\textbf{  0.02}} &   0.71/  0.03 &   0.68/\textcolor{black}{\textbf{  0.02}} &   0.64/  0.04 \\
 68-statlog vehicle si... &   0.58/\textcolor{black}{\textbf{  0.02}} &   0.59/  0.03 &   0.59/\textcolor{black}{\textbf{  0.02}} &   0.59/\textcolor{black}{\textbf{  0.02}} &   0.59/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.02}} &   0.58/\textcolor{black}{\textbf{  0.02}} &   0.58/\textcolor{black}{\textbf{  0.02}} &   0.60/\textcolor{black}{\textbf{  0.02}} \\
@@ -179,13 +197,17 @@
 91-wilt &   0.61/  0.07 &   0.63/  0.06 & \textcolor{red}{\textbf{  0.60}}/  0.06 &   0.63/  0.05 &   0.68/  0.05 &   0.74/\textcolor{black}{\textbf{  0.03}} &   0.74/\textcolor{black}{\textbf{  0.03}} &   0.69/  0.04 &   0.61/  0.07 &   0.71/  0.04 &   0.72/\textcolor{black}{\textbf{  0.03}} \\
 92-wine & \textcolor{black}{\textbf{  0.94}}/\textcolor{black}{\textbf{  0.02}} &   0.93/\textcolor{black}{\textbf{  0.02}} &   0.93/\textcolor{black}{\textbf{  0.02}} &   0.93/\textcolor{black}{\textbf{  0.02}} &   0.93/\textcolor{black}{\textbf{  0.02}} &   0.93/\textcolor{black}{\textbf{  0.02}} &   0.93/\textcolor{black}{\textbf{  0.02}} &   0.93/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.94}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.94}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.85}}/  0.04 \\ \hline
 93-wine quality white... &   0.24/  0.02 &   0.24/  0.02 &   0.24/  0.02 &   0.24/  0.02 &   0.24/\textcolor{black}{\textbf{  0.01}} &   0.24/  0.02 &   0.23/  0.02 &   0.24/  0.02 &   0.24/  0.02 &   0.23/  0.02 &   0.23/  0.02 \\
-94-yeast 4class &   0.54/\textcolor{black}{\textbf{  0.03}} &   0.55/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.56}}/\textcolor{darkgreen}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.03}} &   0.55/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.03}} &   0.55/\textcolor{black}{\textbf{  0.03}} &   0.54/\textcolor{black}{\textbf{  0.03}} &   0.55/\textcolor{black}{\textbf{  0.03}} &   0.51/  0.04 \\\end{tabular}}\label{strats2aSVM}
+94-yeast 4class &   0.54/\textcolor{black}{\textbf{  0.03}} &   0.55/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.56}}/\textcolor{darkgreen}{\textbf{  0.02}} &   0.55/\textcolor{black}{\textbf{  0.03}} &   0.55/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.03}} &   0.55/\textcolor{black}{\textbf{  0.03}} &   0.54/\textcolor{black}{\textbf{  0.03}} &   0.55/\textcolor{black}{\textbf{  0.03}} &   0.51/  0.04 \\\end{tabular}
+}\label{strats2aSVM}
 \end{center}
-\end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
+\end{table}
+                                     \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{Comparação de estratégias com aprendiz (se aplicável) e classificador SVM. \textit{Média e desvio padrão da ALC da acurácia balanceada. Maior e menor média de cada base estão em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Maiores médias isoladas estão sublinhadas. Os melhores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}}
 \begin{center}\scalebox{0.75}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
- & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\ \hline 65-statlog heart & \textcolor{red}{\textbf{  0.78}}/  0.04 & \textcolor{red}{\textbf{  0.78}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.78}}/  0.04 &   0.79/  0.04 &   0.79/\textcolor{black}{\textbf{  0.03}} &   0.79/  0.04 & \textcolor{red}{\textbf{  0.78}}/  0.04 & \textcolor{red}{\textbf{  0.78}}/  0.04 & \textcolor{blue}{\textbf{  0.80}}/  0.04 &   0.79/  0.04 &   0.79/\textcolor{black}{\textbf{  0.03}} \\
+ & Mar & DWeuc & DWman & DWmah & TUeuc & TUman & TUmah & EERacc & EERent & SVMbal & SVMsim\\
+ \hline 
+65-statlog heart & \textcolor{red}{\textbf{  0.78}}/  0.04 & \textcolor{red}{\textbf{  0.78}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.78}}/  0.04 &   0.79/  0.04 &   0.79/\textcolor{black}{\textbf{  0.03}} &   0.79/  0.04 & \textcolor{red}{\textbf{  0.78}}/  0.04 & \textcolor{red}{\textbf{  0.78}}/  0.04 & \textcolor{blue}{\textbf{  0.80}}/  0.04 &   0.79/  0.04 &   0.79/\textcolor{black}{\textbf{  0.03}} \\
 66-statlog image segm... &   0.78/  0.03 & \textcolor{red}{\textbf{  0.47}}/  0.03 &   0.48/  0.05 &   0.58/  0.04 &   0.78/\textcolor{black}{\textbf{  0.01}} &   0.78/  0.02 & \textcolor{blue}{\textbf{  0.79}}/\textcolor{black}{\textbf{  0.01}} &   0.77/  0.02 &   0.77/  0.02 &   0.70/  0.03 &   0.73/  0.02 \\
 67-statlog landsat sa... &   0.74/  0.03 &   0.49/  0.04 & \textcolor{red}{\textbf{  0.47}}/\textcolor{black}{\textbf{  0.02}} &   0.66/  0.03 &   0.75/\textcolor{black}{\textbf{  0.02}} &   0.75/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.76}}/\textcolor{black}{\textbf{  0.02}} &   0.75/\textcolor{black}{\textbf{  0.02}} &   0.73/\textcolor{black}{\textbf{  0.02}} &   0.70/  0.03 &   0.68/  0.04 \\
 68-statlog vehicle si... &   0.60/\textcolor{black}{\textbf{  0.02}} &   0.58/\textcolor{black}{\textbf{  0.02}} &   0.57/\textcolor{black}{\textbf{  0.02}} &   0.56/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.61}}/\textcolor{black}{\textbf{  0.02}} &   0.59/\textcolor{black}{\textbf{  0.02}} &   0.60/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.51}}/  0.05 & \textcolor{red}{\textbf{  0.51}}/  0.04 \\
@@ -214,6 +236,8 @@
 91-wilt &   0.72/\textcolor{black}{\textbf{  0.03}} &   0.76/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.03}} &   0.67/\textcolor{black}{\textbf{  0.03}} &   0.75/\textcolor{black}{\textbf{  0.03}} &   0.75/\textcolor{black}{\textbf{  0.03}} &   0.68/  0.05 &   0.69/  0.04 & \textcolor{blue}{\textbf{  0.77}}/\textcolor{black}{\textbf{  0.03}} &   0.71/  0.04 &   0.72/\textcolor{darkgreen}{\textbf{  0.02}} \\
 92-wine &   0.88/  0.04 &   0.89/  0.03 &   0.89/  0.03 &   0.87/  0.03 &   0.89/  0.03 &   0.91/  0.03 &   0.89/  0.04 &   0.92/  0.03 &   0.90/  0.03 &   0.92/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.95}}}/\textcolor{darkgreen}{\textbf{  0.01}} \\ \hline
 93-wine quality white... &   0.24/  0.02 & \textcolor{red}{\textbf{  0.22}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.22}}/  0.02 & \textcolor{red}{\textbf{  0.22}}/\textcolor{black}{\textbf{  0.01}} &   0.23/  0.02 &   0.24/  0.02 &   0.24/  0.02 &   0.24/  0.02 &   0.24/  0.02 & \textcolor{blue}{\textbf{  0.26}}/  0.02 & \textcolor{blue}{\textbf{  0.26}}/  0.02 \\
-94-yeast 4class &   0.55/  0.04 &   0.49/  0.05 &   0.50/  0.06 & \textcolor{red}{\textbf{  0.47}}/  0.05 & \textcolor{black}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.03}} &   0.55/\textcolor{black}{\textbf{  0.03}} &   0.55/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.03}} &   0.55/\textcolor{black}{\textbf{  0.03}} & \underline{\textcolor{blue}{\textbf{  0.57}}}/\textcolor{black}{\textbf{  0.03}} \\\end{tabular}}\label{strats2bSVM}
+94-yeast 4class &   0.55/  0.04 &   0.49/  0.05 &   0.50/  0.06 & \textcolor{red}{\textbf{  0.47}}/  0.05 & \textcolor{black}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.03}} &   0.55/\textcolor{black}{\textbf{  0.03}} &   0.55/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.03}} &   0.55/\textcolor{black}{\textbf{  0.03}} & \underline{\textcolor{blue}{\textbf{  0.57}}}/\textcolor{black}{\textbf{  0.03}} \\\end{tabular}
+}\label{strats2bSVM}
 \end{center}
 \end{table}
+                                     
